[NetworkSetup] Added possibility to drop current wifi config Requested by GigaBlue1 Thanks to @teamblue-e2

--- a/po/ca.po
+++ b/po/ca.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-04 18:59+0200\n"
+"POT-Creation-Date: 2024-06-20 07:37+0200\n"
 "PO-Revision-Date: 2007-08-14 10:23+0200\n"
 "Last-Translator: Oriol Pellicer <oriol@elsud.org>\n"
 "Language-Team: \n"
@@ -1425,6 +1425,15 @@ msgstr ""
 #
 #, fuzzy
 msgid "Are you sure you want to reload the EPG data from:\n"
+msgstr ""
+"segur que vols restaurar\n"
+"el següent backup:\n"
+
+#
+#, fuzzy
+msgid ""
+"Are you sure you want to remove your wifi configuration?\n"
+"\n"
 msgstr ""
 "segur que vols restaurar\n"
 "el següent backup:\n"
@@ -2888,7 +2897,7 @@ msgstr ""
 msgid "Configure the duration in minutes for the screensaver."
 msgstr ""
 
-msgid "Configure the duration in minutes for the sleeptimer. Select this entry and click OK or green to start/stop the sleeptimer"
+msgid "Configure the duration in minutes for the sleeptimer. Select this entry and press blue to start/restart the sleeptimer or use yellow for stop active sleeptimer."
 msgstr ""
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
@@ -3094,11 +3103,6 @@ msgstr ""
 #
 msgid "Configure your network again"
 msgstr ""
-
-#
-#, fuzzy
-msgid "Configure your network settings and press OK to scan"
-msgstr "Prem OK per a activar la configuració."
 
 #
 msgid "Configure your wireless LAN again"
@@ -3771,6 +3775,11 @@ msgstr "Ha fallat l'eliminació!"
 
 #
 #, fuzzy
+msgid "Delete Wifi configuration"
+msgstr "Configuració del sintonitzador"
+
+#
+#, fuzzy
 msgid "Delete all the text"
 msgstr "esborrar entrada de la llista"
 
@@ -3826,6 +3835,11 @@ msgstr ""
 
 msgid "Delete the character under the text cursor"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Delete the current Wifi configuration.\n"
+msgstr "Configuració del sintonitzador"
 
 msgid "Delete the selected files or directories"
 msgstr ""
@@ -5004,6 +5018,11 @@ msgstr ""
 msgid "Error reading bouquets.tv"
 msgstr "fi de l'edició de llistes"
 
+#
+#, fuzzy
+msgid "Error removing your wifi configuration"
+msgstr "Configuració del sintonitzador"
+
 #, python-format
 msgid ""
 "Error renaming %s to %s:\n"
@@ -5575,6 +5594,10 @@ msgstr ""
 msgid "Filesystem check"
 msgstr ""
 
+#, python-format
+msgid "Filesystem: %s\n"
+msgstr ""
+
 msgid "Filter extension for 'My extension' setting of 'Filter extension'. Use the extension name without a '.'."
 msgstr ""
 
@@ -5612,6 +5635,11 @@ msgstr ""
 #
 msgid "Finished configuring your network"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Finished removing your wifi configuration"
+msgstr "Configuració del sintonitzador"
 
 #
 msgid "Finished restarting your network"
@@ -5745,6 +5773,11 @@ msgstr ""
 #, fuzzy
 msgid "France"
 msgstr "Cancel·lar"
+
+#
+#, fuzzy, python-format
+msgid "Free: %s/%s\n"
+msgstr "Model: "
 
 #
 msgid "French"
@@ -6913,6 +6946,11 @@ msgstr "Flash interna"
 msgid "Internal flash"
 msgstr "Flash interna"
 
+#
+#, fuzzy
+msgid "Internal flash storage:"
+msgstr "Flash interna"
+
 msgid "Internal hdd only"
 msgstr ""
 
@@ -7889,6 +7927,11 @@ msgstr ""
 msgid "MountView"
 msgstr ""
 
+#
+#, fuzzy, python-format
+msgid "Mountpoint: %s (%s)\n"
+msgstr "Model: "
+
 msgid "Mountpoints"
 msgstr ""
 
@@ -8423,6 +8466,9 @@ msgstr ""
 #
 msgid "No backup needed"
 msgstr "No cal backup"
+
+msgid "No config items available"
+msgstr ""
 
 #
 #, fuzzy
@@ -9388,6 +9434,9 @@ msgstr ""
 msgid "Please connect your %s %s to the internet"
 msgstr ""
 
+msgid "Please contact the manufacturer for clarification."
+msgstr ""
+
 #
 msgid "Please do not change any values unless you know what you are doing!"
 msgstr "Sisplau, no canviïs els valors si no n'estàs segur!"
@@ -9953,10 +10002,6 @@ msgid "Press OK to activate the selected %s skin."
 msgstr "Prem OK per a activar la configuració."
 
 #
-msgid "Press OK to activate the settings."
-msgstr "Prem OK per a activar la configuració."
-
-#
 msgid "Press OK to edit the settings."
 msgstr ""
 
@@ -10013,6 +10058,11 @@ msgstr ""
 
 msgid "Press OK, save and exit..."
 msgstr ""
+
+#
+#, fuzzy
+msgid "Press green button to activate the settings."
+msgstr "Prem OK per a activar la configuració."
 
 msgid "Press or select button and then press 'OK' for attach function."
 msgstr ""
@@ -10786,6 +10836,11 @@ msgstr "Reengegar la IGU ara?"
 #, fuzzy
 msgid "Restart Network Adapter"
 msgstr "Selecciona interfície de xarxa"
+
+#
+#, fuzzy
+msgid "Restart Sleeptimer"
+msgstr "Hora inici"
 
 #
 #, fuzzy
@@ -13315,6 +13370,21 @@ msgstr "Hora inici"
 
 #
 #, fuzzy
+msgid "Start CableScan"
+msgstr "Ràpid"
+
+#
+#, fuzzy
+msgid "Start Cablescan"
+msgstr "Ràpid"
+
+#
+#, fuzzy
+msgid "Start Fastscan"
+msgstr "Ràpid"
+
+#
+#, fuzzy
 msgid "Start Sleeptimer"
 msgstr "Hora inici"
 
@@ -13322,11 +13392,6 @@ msgstr "Hora inici"
 #, fuzzy
 msgid "Start directory"
 msgstr "directori /var"
-
-#
-#, fuzzy
-msgid "Start fastscan"
-msgstr "Ràpid"
 
 #
 msgid "Start from the beginning"
@@ -13377,12 +13442,12 @@ msgstr "activar pausa"
 msgid "Start with list screen"
 msgstr ""
 
-#
-#, fuzzy
-msgid "Start/Stop Sleeptimer"
-msgstr "Hora inici"
-
 msgid "Start/stop slide show"
+msgstr ""
+
+msgid ""
+"Starting download of image file?\n"
+"Press OK to start or Exit to abort."
 msgstr ""
 
 #
@@ -13900,8 +13965,9 @@ msgstr ""
 
 #
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
+#. Don't translate TRANSLATOR_INFO to show '(N/A)'
 msgid "TRANSLATOR_INFO"
-msgstr ""
+msgstr "TRANSLATOR_INFO"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -14623,6 +14689,11 @@ msgstr "Gravació"
 
 #
 #, fuzzy
+msgid "Timer recording failed. No space left on device!\n"
+msgstr "canviar la gravació (durada)"
+
+#
+#, fuzzy
 msgid "Timer recording location"
 msgstr "canviar la gravació (durada)"
 
@@ -14818,6 +14889,11 @@ msgstr ""
 #
 #, fuzzy
 msgid "Translations Info"
+msgstr "Tipus Transponedor"
+
+#
+#, fuzzy
+msgid "Translator comment"
 msgstr "Tipus Transponedor"
 
 #
@@ -15305,6 +15381,11 @@ msgstr ""
 #, fuzzy
 msgid "Use circular LNB"
 msgstr "circular esq."
+
+#
+#, fuzzy
+msgid "Use default spinner"
+msgstr "Definit per l'usuari"
 
 msgid "Use fastscan channel names"
 msgstr ""
@@ -16048,6 +16129,9 @@ msgid "When enabled, services may be grouped in multiple bouquets."
 msgstr ""
 
 msgid "When enabled, show channel numbers in the channel selection screen."
+msgstr ""
+
+msgid "When enabled, spinners that come with the activated skin are ignored."
 msgstr ""
 
 msgid "When enabled, subtitles for the hearing impaired can be used."
