--- a/po/en.po
+++ b/po/en.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-04 18:59+0200\n"
+"POT-Creation-Date: 2024-06-20 07:37+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: satdreamgr\n"
 "Language-Team: \n"
@@ -1201,6 +1201,11 @@ msgid "Are you sure you want to exit this wizard?"
 msgstr ""
 
 msgid "Are you sure you want to reload the EPG data from:\n"
+msgstr ""
+
+msgid ""
+"Are you sure you want to remove your wifi configuration?\n"
+"\n"
 msgstr ""
 
 msgid ""
@@ -2431,7 +2436,7 @@ msgstr ""
 msgid "Configure the duration in minutes for the screensaver."
 msgstr ""
 
-msgid "Configure the duration in minutes for the sleeptimer. Select this entry and click OK or green to start/stop the sleeptimer"
+msgid "Configure the duration in minutes for the sleeptimer. Select this entry and press blue to start/restart the sleeptimer or use yellow for stop active sleeptimer."
 msgstr ""
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
@@ -2630,9 +2635,6 @@ msgid "Configure your internal LAN"
 msgstr ""
 
 msgid "Configure your network again"
-msgstr ""
-
-msgid "Configure your network settings and press OK to scan"
 msgstr ""
 
 msgid "Configure your wireless LAN again"
@@ -3188,6 +3190,9 @@ msgstr ""
 msgid "Delete Image"
 msgstr ""
 
+msgid "Delete Wifi configuration"
+msgstr ""
+
 msgid "Delete all the text"
 msgstr ""
 
@@ -3228,6 +3233,9 @@ msgid "Delete the character to the left of text cursor"
 msgstr ""
 
 msgid "Delete the character under the text cursor"
+msgstr ""
+
+msgid "Delete the current Wifi configuration.\n"
 msgstr ""
 
 msgid "Delete the selected files or directories"
@@ -4181,6 +4189,9 @@ msgstr ""
 msgid "Error reading bouquets.tv"
 msgstr ""
 
+msgid "Error removing your wifi configuration"
+msgstr ""
+
 #, python-format
 msgid ""
 "Error renaming %s to %s:\n"
@@ -4644,6 +4655,10 @@ msgstr ""
 msgid "Filesystem check"
 msgstr ""
 
+#, python-format
+msgid "Filesystem: %s\n"
+msgstr ""
+
 msgid "Filter extension for 'My extension' setting of 'Filter extension'. Use the extension name without a '.'."
 msgstr ""
 
@@ -4675,6 +4690,9 @@ msgid "Finished"
 msgstr ""
 
 msgid "Finished configuring your network"
+msgstr ""
+
+msgid "Finished removing your wifi configuration"
 msgstr ""
 
 msgid "Finished restarting your network"
@@ -4794,6 +4812,10 @@ msgid "Frame size in full view"
 msgstr ""
 
 msgid "France"
+msgstr ""
+
+#, python-format
+msgid "Free: %s/%s\n"
 msgstr ""
 
 msgid "French"
@@ -5756,6 +5778,9 @@ msgstr ""
 msgid "Internal flash"
 msgstr ""
 
+msgid "Internal flash storage:"
+msgstr ""
+
 msgid "Internal hdd only"
 msgstr ""
 
@@ -6580,6 +6605,10 @@ msgstr ""
 msgid "MountView"
 msgstr ""
 
+#, python-format
+msgid "Mountpoint: %s (%s)\n"
+msgstr ""
+
 msgid "Mountpoints"
 msgstr ""
 
@@ -6995,6 +7024,9 @@ msgid "No age block"
 msgstr ""
 
 msgid "No backup needed"
+msgstr ""
+
+msgid "No config items available"
 msgstr ""
 
 msgid ""
@@ -7777,6 +7809,9 @@ msgstr ""
 msgid "Please connect your %s %s to the internet"
 msgstr ""
 
+msgid "Please contact the manufacturer for clarification."
+msgstr ""
+
 msgid "Please do not change any values unless you know what you are doing!"
 msgstr ""
 
@@ -8204,9 +8239,6 @@ msgstr ""
 msgid "Press OK to activate the selected %s skin."
 msgstr ""
 
-msgid "Press OK to activate the settings."
-msgstr ""
-
 msgid "Press OK to edit the settings."
 msgstr ""
 
@@ -8249,6 +8281,9 @@ msgid "Press OK to toggle the selection."
 msgstr ""
 
 msgid "Press OK, save and exit..."
+msgstr ""
+
+msgid "Press green button to activate the settings."
 msgstr ""
 
 msgid "Press or select button and then press 'OK' for attach function."
@@ -8856,6 +8891,9 @@ msgid "Restart GUI now?"
 msgstr ""
 
 msgid "Restart Network Adapter"
+msgstr ""
+
+msgid "Restart Sleeptimer"
 msgstr ""
 
 msgid "Restart both"
@@ -10881,15 +10919,23 @@ msgstr ""
 msgid "Start"
 msgstr ""
 
+#, fuzzy
+msgid "Start CableScan"
+msgstr "FastScan"
+
+#, fuzzy
+msgid "Start Cablescan"
+msgstr "FastScan"
+
+#, fuzzy
+msgid "Start Fastscan"
+msgstr "FastScan"
+
 msgid "Start Sleeptimer"
 msgstr ""
 
 msgid "Start directory"
 msgstr ""
-
-#, fuzzy
-msgid "Start fastscan"
-msgstr "FastScan"
 
 msgid "Start from the beginning"
 msgstr ""
@@ -10928,10 +10974,12 @@ msgstr ""
 msgid "Start with list screen"
 msgstr ""
 
-msgid "Start/Stop Sleeptimer"
+msgid "Start/stop slide show"
 msgstr ""
 
-msgid "Start/stop slide show"
+msgid ""
+"Starting download of image file?\n"
+"Press OK to start or Exit to abort."
 msgstr ""
 
 msgid "Starting on"
@@ -11331,8 +11379,9 @@ msgid "TEXT"
 msgstr ""
 
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
+#. Don't translate TRANSLATOR_INFO to show '(N/A)'
 msgid "TRANSLATOR_INFO"
-msgstr ""
+msgstr "TRANSLATOR_INFO"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr ""
@@ -11990,6 +12039,9 @@ msgstr ""
 msgid "Timer overview"
 msgstr ""
 
+msgid "Timer recording failed. No space left on device!\n"
+msgstr ""
+
 msgid "Timer recording location"
 msgstr ""
 
@@ -12144,6 +12196,9 @@ msgid "Translations"
 msgstr ""
 
 msgid "Translations Info"
+msgstr ""
+
+msgid "Translator comment"
 msgstr ""
 
 msgid "Transmission mode"
@@ -12554,6 +12609,9 @@ msgid "Use as PiP if possible"
 msgstr ""
 
 msgid "Use circular LNB"
+msgstr ""
+
+msgid "Use default spinner"
 msgstr ""
 
 msgid "Use fastscan channel names"
@@ -13199,6 +13257,9 @@ msgid "When enabled, services may be grouped in multiple bouquets."
 msgstr ""
 
 msgid "When enabled, show channel numbers in the channel selection screen."
+msgstr ""
+
+msgid "When enabled, spinners that come with the activated skin are ignored."
 msgstr ""
 
 msgid "When enabled, subtitles for the hearing impaired can be used."
