--- a/po/fy.po
+++ b/po/fy.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-04 18:59+0200\n"
+"POT-Creation-Date: 2024-06-20 07:37+0200\n"
 "PO-Revision-Date: 2008-12-29 16:22+0100\n"
 "Last-Translator: gerrit <gerrit@nedlinux.nl>\n"
 "Language-Team: gerrit <fy@li.org>\n"
@@ -1459,6 +1459,15 @@ msgid "Are you sure you want to reload the EPG data from:\n"
 msgstr ""
 "witte jo seker dizze werom te setten\n"
 "de extra kopie:\n"
+
+#
+#, fuzzy
+msgid ""
+"Are you sure you want to remove your wifi configuration?\n"
+"\n"
+msgstr ""
+"Wolle jo wier dizze netwurk konfiguraasje aktief meitsje ?\n"
+"\n"
 
 #
 msgid ""
@@ -2956,7 +2965,7 @@ msgstr ""
 msgid "Configure the duration in minutes for the screensaver."
 msgstr ""
 
-msgid "Configure the duration in minutes for the sleeptimer. Select this entry and click OK or green to start/stop the sleeptimer"
+msgid "Configure the duration in minutes for the sleeptimer. Select this entry and press blue to start/restart the sleeptimer or use yellow for stop active sleeptimer."
 msgstr ""
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
@@ -3170,11 +3179,6 @@ msgstr ""
 #
 msgid "Configure your network again"
 msgstr ""
-
-#
-#, fuzzy
-msgid "Configure your network settings and press OK to scan"
-msgstr "Druk Ok om ynstellingen aktief te meitsjen."
 
 #
 msgid "Configure your wireless LAN again"
@@ -3869,6 +3873,11 @@ msgstr "triem ferwiderje"
 
 #
 #, fuzzy
+msgid "Delete Wifi configuration"
+msgstr "Tuner ynstellingen"
+
+#
+#, fuzzy
 msgid "Delete all the text"
 msgstr "ofspiellyst rigele ferwiderje"
 
@@ -3924,6 +3933,11 @@ msgstr ""
 
 msgid "Delete the character under the text cursor"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Delete the current Wifi configuration.\n"
+msgstr "Dizze ynstellingen aktief meitsje"
 
 msgid "Delete the selected files or directories"
 msgstr ""
@@ -5122,6 +5136,11 @@ msgstr ""
 msgid "Error reading bouquets.tv"
 msgstr "bewurkjen boeket út"
 
+#
+#, fuzzy
+msgid "Error removing your wifi configuration"
+msgstr "Tuner ynstellingen"
+
 #, python-format
 msgid ""
 "Error renaming %s to %s:\n"
@@ -5703,6 +5722,10 @@ msgstr ""
 msgid "Filesystem check"
 msgstr ""
 
+#, python-format
+msgid "Filesystem: %s\n"
+msgstr ""
+
 msgid "Filter extension for 'My extension' setting of 'Filter extension'. Use the extension name without a '.'."
 msgstr ""
 
@@ -5740,6 +5763,11 @@ msgstr "Ofrûn"
 #
 msgid "Finished configuring your network"
 msgstr "Klear mei ynstellen fan it netwurk"
+
+#
+#, fuzzy
+msgid "Finished removing your wifi configuration"
+msgstr "Klear mei it opnei starten fan it netwurk"
 
 #
 msgid "Finished restarting your network"
@@ -5884,6 +5912,11 @@ msgstr "gedielte yn folslein skerm"
 #, fuzzy
 msgid "France"
 msgstr "Ôfbrekke"
+
+#
+#, fuzzy, python-format
+msgid "Free: %s/%s\n"
+msgstr "Model: "
 
 #
 msgid "French"
@@ -7068,6 +7101,11 @@ msgstr "Ynterne Flash"
 msgid "Internal flash"
 msgstr "Ynterne Flash"
 
+#
+#, fuzzy
+msgid "Internal flash storage:"
+msgstr "Ynterne Flash"
+
 msgid "Internal hdd only"
 msgstr ""
 
@@ -8072,6 +8110,11 @@ msgstr "Bewurkje"
 msgid "MountView"
 msgstr ""
 
+#
+#, fuzzy, python-format
+msgid "Mountpoint: %s (%s)\n"
+msgstr "Model: "
+
 msgid "Mountpoints"
 msgstr ""
 
@@ -8616,6 +8659,9 @@ msgstr ""
 #
 msgid "No backup needed"
 msgstr "Gjin backup nedich"
+
+msgid "No config items available"
+msgstr ""
 
 #
 msgid ""
@@ -9607,6 +9653,9 @@ msgstr ""
 msgid "Please connect your %s %s to the internet"
 msgstr ""
 
+msgid "Please contact the manufacturer for clarification."
+msgstr ""
+
 #
 msgid "Please do not change any values unless you know what you are doing!"
 msgstr "Feroarje gjin waarden, wannear jo net witte wat jo dogge!"
@@ -10175,10 +10224,6 @@ msgid "Press OK to activate the selected %s skin."
 msgstr "Druk Ok om ynstellingen aktief te meitsjen."
 
 #
-msgid "Press OK to activate the settings."
-msgstr "Druk Ok om ynstellingen aktief te meitsjen."
-
-#
 msgid "Press OK to edit the settings."
 msgstr "Druk OK om dizze ynstellingen te bewurkjen"
 
@@ -10235,6 +10280,11 @@ msgstr ""
 
 msgid "Press OK, save and exit..."
 msgstr ""
+
+#
+#, fuzzy
+msgid "Press green button to activate the settings."
+msgstr "Druk Ok om ynstellingen aktief te meitsjen."
 
 msgid "Press or select button and then press 'OK' for attach function."
 msgstr ""
@@ -11034,6 +11084,11 @@ msgstr "GUI no opnij starte?"
 #, fuzzy
 msgid "Restart Network Adapter"
 msgstr "Netwurk nij starte"
+
+#
+#, fuzzy
+msgid "Restart Sleeptimer"
+msgstr "Starttiid"
 
 #
 #, fuzzy
@@ -13605,6 +13660,21 @@ msgstr "Start test"
 
 #
 #, fuzzy
+msgid "Start CableScan"
+msgstr "Start test"
+
+#
+#, fuzzy
+msgid "Start Cablescan"
+msgstr "Start test"
+
+#
+#, fuzzy
+msgid "Start Fastscan"
+msgstr "Start test"
+
+#
+#, fuzzy
 msgid "Start Sleeptimer"
 msgstr "Starttiid"
 
@@ -13612,11 +13682,6 @@ msgstr "Starttiid"
 #, fuzzy
 msgid "Start directory"
 msgstr "start map"
-
-#
-#, fuzzy
-msgid "Start fastscan"
-msgstr "Start test"
 
 #
 msgid "Start from the beginning"
@@ -13667,12 +13732,12 @@ msgstr "tiidskowen starte"
 msgid "Start with list screen"
 msgstr ""
 
-#
-#, fuzzy
-msgid "Start/Stop Sleeptimer"
-msgstr "Starttiid"
-
 msgid "Start/stop slide show"
+msgstr ""
+
+msgid ""
+"Starting download of image file?\n"
+"Press OK to start or Exit to abort."
 msgstr ""
 
 #
@@ -14192,8 +14257,9 @@ msgstr ""
 
 #
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
+#. Don't translate TRANSLATOR_INFO to show '(N/A)'
 msgid "TRANSLATOR_INFO"
-msgstr "Oersetter ynfo"
+msgstr "TRANSLATOR_INFO"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -14979,6 +15045,11 @@ msgstr "Tiidsbarren item"
 
 #
 #, fuzzy
+msgid "Timer recording failed. No space left on device!\n"
+msgstr "feroarje opnim tiiden"
+
+#
+#, fuzzy
 msgid "Timer recording location"
 msgstr "feroarje opnim tiiden"
 
@@ -15174,6 +15245,11 @@ msgstr ""
 #
 #, fuzzy
 msgid "Translations Info"
+msgstr "Oersetting"
+
+#
+#, fuzzy
+msgid "Translator comment"
 msgstr "Oersetting"
 
 #
@@ -15665,6 +15741,11 @@ msgstr ""
 #, fuzzy
 msgid "Use circular LNB"
 msgstr "circular links"
+
+#
+#, fuzzy
+msgid "Use default spinner"
+msgstr "Gebruker ynstelling"
 
 msgid "Use fastscan channel names"
 msgstr ""
@@ -16446,6 +16527,9 @@ msgid "When enabled, services may be grouped in multiple bouquets."
 msgstr ""
 
 msgid "When enabled, show channel numbers in the channel selection screen."
+msgstr ""
+
+msgid "When enabled, spinners that come with the activated skin are ignored."
 msgstr ""
 
 msgid "When enabled, subtitles for the hearing impaired can be used."
