--- a/po/ar.po
+++ b/po/ar.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-04 18:59+0200\n"
+"POT-Creation-Date: 2024-06-20 07:37+0200\n"
 "PO-Revision-Date: 2018-12-17 02:51+0200\n"
 "Last-Translator: Hazem <moustafagamal@hotmail.com>\n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -1439,6 +1439,14 @@ msgstr "هل أنت متأكد أنك تريد الخروج من هذه النا
 msgid "Are you sure you want to reload the EPG data from:\n"
 msgstr "هل أنت متأكد أنك تريد الخروج من هذه النافذه ؟"
 
+#, fuzzy
+msgid ""
+"Are you sure you want to remove your wifi configuration?\n"
+"\n"
+msgstr ""
+"هل أنت متاكد أنك تريد تنشيط تكوينات الشبكه؟\n"
+"\n"
+
 msgid ""
 "Are you sure you want to restart your network interfaces?\n"
 "\n"
@@ -2839,7 +2847,7 @@ msgstr ""
 msgid "Configure the duration in minutes for the screensaver."
 msgstr ""
 
-msgid "Configure the duration in minutes for the sleeptimer. Select this entry and click OK or green to start/stop the sleeptimer"
+msgid "Configure the duration in minutes for the sleeptimer. Select this entry and press blue to start/restart the sleeptimer or use yellow for stop active sleeptimer."
 msgstr ""
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
@@ -3048,10 +3056,6 @@ msgstr "تكوين شبكتك الداخليه"
 
 msgid "Configure your network again"
 msgstr "تكوين الشبكه مره ثانيه"
-
-#, fuzzy
-msgid "Configure your network settings and press OK to scan"
-msgstr "أضغط موافق لتفعيل الجلد المختار."
 
 msgid "Configure your wireless LAN again"
 msgstr "تكوين شبكتك اللاسلكيه"
@@ -3678,6 +3682,10 @@ msgid "Delete Image"
 msgstr "حذف الملف"
 
 #, fuzzy
+msgid "Delete Wifi configuration"
+msgstr "تهيئة الموالف"
+
+#, fuzzy
 msgid "Delete all the text"
 msgstr "مسح مدخل قائمة العرض"
 
@@ -3727,6 +3735,10 @@ msgstr ""
 
 msgid "Delete the character under the text cursor"
 msgstr ""
+
+#, fuzzy
+msgid "Delete the current Wifi configuration.\n"
+msgstr "تنشيط التكوين الحالى"
 
 msgid "Delete the selected files or directories"
 msgstr ""
@@ -4849,6 +4861,10 @@ msgstr ""
 msgid "Error reading bouquets.tv"
 msgstr "إنتهاء تحرير الباقه"
 
+#, fuzzy
+msgid "Error removing your wifi configuration"
+msgstr "تهيئة الموالف"
+
 #, python-format
 msgid ""
 "Error renaming %s to %s:\n"
@@ -5385,6 +5401,10 @@ msgstr "أختار ملفات/مجلدات النسخه الاحتياطيه"
 msgid "Filesystem check"
 msgstr "فحص نظام الملفات"
 
+#, fuzzy, python-format
+msgid "Filesystem: %s\n"
+msgstr "فحص نظام الملفات"
+
 msgid "Filter extension for 'My extension' setting of 'Filter extension'. Use the extension name without a '.'."
 msgstr ""
 
@@ -5419,6 +5439,10 @@ msgstr "تم الانتهاء"
 
 msgid "Finished configuring your network"
 msgstr "تم الانتهاء من تكوين شبكتك"
+
+#, fuzzy
+msgid "Finished removing your wifi configuration"
+msgstr "تم النتهاء من إعادة تشغيل الشبكه"
 
 msgid "Finished restarting your network"
 msgstr "تم النتهاء من إعادة تشغيل الشبكه"
@@ -5549,6 +5573,11 @@ msgstr ""
 #, fuzzy
 msgid "France"
 msgstr "إلغاء"
+
+#
+#, fuzzy, python-format
+msgid "Free: %s/%s\n"
+msgstr "موديل :"
 
 #
 msgid "French"
@@ -6662,6 +6691,11 @@ msgstr "الفلاش الداخلى"
 msgid "Internal flash"
 msgstr "الفلاش الداخلى"
 
+#
+#, fuzzy
+msgid "Internal flash storage:"
+msgstr "الفلاش الداخلى"
+
 msgid "Internal hdd only"
 msgstr ""
 
@@ -7643,6 +7677,11 @@ msgstr "تحرير"
 msgid "MountView"
 msgstr ""
 
+#
+#, fuzzy, python-format
+msgid "Mountpoint: %s (%s)\n"
+msgstr "موديل :"
+
 msgid "Mountpoints"
 msgstr ""
 
@@ -8139,6 +8178,11 @@ msgstr ""
 #
 msgid "No backup needed"
 msgstr "لا حاجه الى نسخه إحتياطيه "
+
+#
+#, fuzzy
+msgid "No config items available"
+msgstr "التحديثات المتاحه"
 
 #
 msgid ""
@@ -9070,6 +9114,9 @@ msgstr ""
 msgid "Please connect your %s %s to the internet"
 msgstr ""
 
+msgid "Please contact the manufacturer for clarification."
+msgstr ""
+
 msgid "Please do not change any values unless you know what you are doing!"
 msgstr "من فضلك لا تغير أى قيمه ألا إذا كنت متأكد مما تفعل !"
 
@@ -9577,10 +9624,6 @@ msgstr "أضغط موافق من الريموت للمتابعه"
 msgid "Press OK to activate the selected %s skin."
 msgstr "أضغط موافق لتفعيل الجلد المختار."
 
-#
-msgid "Press OK to activate the settings."
-msgstr "اضغط موافق لتفعيل الاعدادات"
-
 msgid "Press OK to edit the settings."
 msgstr "أضغط موافق لتحرير الاعدادات"
 
@@ -9629,6 +9672,11 @@ msgstr "أضغط موافق لتبدل الأختيار"
 
 msgid "Press OK, save and exit..."
 msgstr ""
+
+#
+#, fuzzy
+msgid "Press green button to activate the settings."
+msgstr "اضغط موافق لتفعيل الاعدادات"
 
 msgid "Press or select button and then press 'OK' for attach function."
 msgstr ""
@@ -10336,6 +10384,11 @@ msgstr "هل تريد إعادة تشغيل الاينجما2 الان ؟"
 #, fuzzy
 msgid "Restart Network Adapter"
 msgstr "إعادة تشغيل الشبكه"
+
+#
+#, fuzzy
+msgid "Restart Sleeptimer"
+msgstr "وقت البـدأ"
 
 #, fuzzy
 msgid "Restart both"
@@ -12772,17 +12825,27 @@ msgstr "أختبار البدأ"
 
 #
 #, fuzzy
+msgid "Start CableScan"
+msgstr "أختبار البدأ"
+
+#
+#, fuzzy
+msgid "Start Cablescan"
+msgstr "أختبار البدأ"
+
+#
+#, fuzzy
+msgid "Start Fastscan"
+msgstr "أختبار البدأ"
+
+#
+#, fuzzy
 msgid "Start Sleeptimer"
 msgstr "وقت البـدأ"
 
 #, fuzzy
 msgid "Start directory"
 msgstr "دليل البدايه"
-
-#
-#, fuzzy
-msgid "Start fastscan"
-msgstr "أختبار البدأ"
 
 #
 msgid "Start from the beginning"
@@ -12831,12 +12894,12 @@ msgstr "أبدأ تايم شفت"
 msgid "Start with list screen"
 msgstr ""
 
-#
-#, fuzzy
-msgid "Start/Stop Sleeptimer"
-msgstr "وقت البـدأ"
-
 msgid "Start/stop slide show"
+msgstr ""
+
+msgid ""
+"Starting download of image file?\n"
+"Press OK to start or Exit to abort."
 msgstr ""
 
 msgid "Starting on"
@@ -13339,8 +13402,9 @@ msgstr ""
 
 #
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
+#. Don't translate TRANSLATOR_INFO to show '(N/A)'
 msgid "TRANSLATOR_INFO"
-msgstr ""
+msgstr "TRANSLATOR_INFO"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -14089,6 +14153,11 @@ msgstr "إدخال المؤقت"
 
 #
 #, fuzzy
+msgid "Timer recording failed. No space left on device!\n"
+msgstr "موضع تسجيل المؤقت"
+
+#
+#, fuzzy
 msgid "Timer recording location"
 msgstr "موضع تسجيل المؤقت"
 
@@ -14278,6 +14347,11 @@ msgstr ""
 #
 #, fuzzy
 msgid "Translations Info"
+msgstr "ترجمه"
+
+#
+#, fuzzy
+msgid "Translator comment"
 msgstr "ترجمه"
 
 #
@@ -14749,6 +14823,11 @@ msgstr ""
 #, fuzzy
 msgid "Use circular LNB"
 msgstr "دائرى يسار"
+
+#
+#, fuzzy
+msgid "Use default spinner"
+msgstr "يحددها المستخدم"
 
 msgid "Use fastscan channel names"
 msgstr ""
@@ -15475,6 +15554,9 @@ msgid "When enabled, services may be grouped in multiple bouquets."
 msgstr ""
 
 msgid "When enabled, show channel numbers in the channel selection screen."
+msgstr ""
+
+msgid "When enabled, spinners that come with the activated skin are ignored."
 msgstr ""
 
 msgid "When enabled, subtitles for the hearing impaired can be used."
