--- a/po/de.po
+++ b/po/de.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-04 18:59+0200\n"
-"PO-Revision-Date: 2024-06-04 19:03+0200\n"
+"POT-Creation-Date: 2024-06-20 07:37+0200\n"
+"PO-Revision-Date: 2024-06-20 07:41+0200\n"
 "Last-Translator: Teamblue teamblue@online.de <teamblue-e2@online.de>\n"
 "Language-Team: Teamblue teamblue@online.de\n"
 "Language: de\n"
@@ -1240,6 +1240,13 @@ msgstr "Sind Sie sicher, dass Sie diesen Assistenten verlassen möchten?"
 
 msgid "Are you sure you want to reload the EPG data from:\n"
 msgstr "Sind Sie sicher, dass Sie die EPG Daten neu laden möchten:\n"
+
+msgid ""
+"Are you sure you want to remove your wifi configuration?\n"
+"\n"
+msgstr ""
+"Bist du sicher, dass du deine WLAN-Konfiguration entfernen willst?\n"
+"\n"
 
 msgid ""
 "Are you sure you want to restart your network interfaces?\n"
@@ -2508,8 +2515,8 @@ msgstr "Konfiguriere den Zeitraum in Stunden, nachdem der Receiver in den Standb
 msgid "Configure the duration in minutes for the screensaver."
 msgstr "Konfiguriert die Dauer in Minuten bis zum Start des Screensavers."
 
-msgid "Configure the duration in minutes for the sleeptimer. Select this entry and click OK or green to start/stop the sleeptimer"
-msgstr "Konfiguriere den Zeitraum in Minuten für den Ausschalt-Timer. Wähle diesen Eintrag aus und drücke OK oder die grüne Taste, um den Ausschalt-Timer zu starten/beenden"
+msgid "Configure the duration in minutes for the sleeptimer. Select this entry and press blue to start/restart the sleeptimer or use yellow for stop active sleeptimer."
+msgstr "Konfiguriere den Zeitraum in Minuten für den Ausschalt-Timer. Wähle diesen Eintrag aus und drücke blau, um den Timer zu starten/neuzustarten oder gelb, um den aktiven Timer zu stoppen."
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
 msgstr "Konfiguriere die Dauer, wann der Receiver ausgeschaltet werden soll, falls er sich im Standby-Modus befindet."
@@ -2708,9 +2715,6 @@ msgstr "Internes Netzwerk konfigurieren"
 
 msgid "Configure your network again"
 msgstr "Netzwerk erneut konfigurieren"
-
-msgid "Configure your network settings and press OK to scan"
-msgstr "Konfigurieren Sie Ihre Netzwerkeinstellungen und drücken Sie zum Suchen OK"
 
 msgid "Configure your wireless LAN again"
 msgstr "Funk-Netzwerk erneut konfigurieren"
@@ -3267,6 +3271,9 @@ msgstr "Lösche 1 Element"
 msgid "Delete Image"
 msgstr "Image löschen"
 
+msgid "Delete Wifi configuration"
+msgstr "WLAN-Konfiguration löschen"
+
 msgid "Delete all the text"
 msgstr "Lösche gesamten Text"
 
@@ -3308,6 +3315,9 @@ msgstr "Lösche das Zeichen links vom Text Cursor"
 
 msgid "Delete the character under the text cursor"
 msgstr "Lösche das Zeichen unter dem Text Cursor"
+
+msgid "Delete the current Wifi configuration.\n"
+msgstr "Lösche die aktuelle WLAN-Konfiguration.\n"
 
 msgid "Delete the selected files or directories"
 msgstr "Ausgewählte Dateien oder Verzeichnisse löschen"
@@ -3373,7 +3383,7 @@ msgid "Detected NIMs:"
 msgstr "Erkannte Tuner:"
 
 msgid "Detected storage devices:"
-msgstr "Erkannte Festplatte(n):"
+msgstr "Erkannte Speichergeräte:"
 
 msgid "Device"
 msgstr "Gerät"
@@ -4281,6 +4291,9 @@ msgstr "Fehler beim Lesen der 'bouquets.radio'"
 msgid "Error reading bouquets.tv"
 msgstr "Bouquet Liste öffnen"
 
+msgid "Error removing your wifi configuration"
+msgstr "Fehler beim Entfernen deiner WLAN-Konfiguration"
+
 #, python-format
 msgid ""
 "Error renaming %s to %s:\n"
@@ -4760,6 +4773,10 @@ msgstr "Nicht zu sichernde Dateien/Ordner"
 msgid "Filesystem check"
 msgstr "Dateisystemüberprüfung"
 
+#, python-format
+msgid "Filesystem: %s\n"
+msgstr "Dateisystem: %s\n"
+
 msgid "Filter extension for 'My extension' setting of 'Filter extension'. Use the extension name without a '.'."
 msgstr "Filtererweiterung für 'meine Erweiterung' Einstellung von 'Filtererweiterung'. Verwenden Sie den Erweiterungsnamen ohne '.' ein."
 
@@ -4792,6 +4809,9 @@ msgstr "Beendet"
 
 msgid "Finished configuring your network"
 msgstr "Netzwerk-Konfiguration abgeschlossen"
+
+msgid "Finished removing your wifi configuration"
+msgstr "Fertig mit dem Entfernen deiner WLAN-Konfiguration"
 
 msgid "Finished restarting your network"
 msgstr "Netzwerkneustart abgeschlossen"
@@ -4915,6 +4935,10 @@ msgstr "Framegröße im Vollbild"
 
 msgid "France"
 msgstr "France"
+
+#, python-format
+msgid "Free: %s/%s\n"
+msgstr "Frei: %s/%s\n"
 
 msgid "French"
 msgstr "Französisch"
@@ -5881,6 +5905,9 @@ msgstr "Intern"
 msgid "Internal flash"
 msgstr "Interner Flash"
 
+msgid "Internal flash storage:"
+msgstr "Interner Flash-Speicher:"
+
 msgid "Internal hdd only"
 msgstr "Nur interne Festplatte"
 
@@ -6712,6 +6739,10 @@ msgstr "Einhängepunkt Anpassen"
 msgid "MountView"
 msgstr "Mount Übersicht"
 
+#, python-format
+msgid "Mountpoint: %s (%s)\n"
+msgstr "Einhängepunkt: %s (%s)\n"
+
 msgid "Mountpoints"
 msgstr "Einhängepunkt"
 
@@ -7132,6 +7163,9 @@ msgstr "Keine Alterseinschränkung"
 
 msgid "No backup needed"
 msgstr "Keine Sicherung benötigt"
+
+msgid "No config items available"
+msgstr "Keine Konfigurationspunkte verfügbar"
 
 msgid ""
 "No data on transponder!\n"
@@ -7924,6 +7958,9 @@ msgstr ""
 msgid "Please connect your %s %s to the internet"
 msgstr "Bitte die %s %s mit dem Internet verbinden"
 
+msgid "Please contact the manufacturer for clarification."
+msgstr "Bitte wende dich zur Klärung an den Imagebetreiber."
+
 msgid "Please do not change any values unless you know what you are doing!"
 msgstr "Bitte ändern Sie keine Werte, falls Sie nicht wissen, was Sie tun!"
 
@@ -8361,9 +8398,6 @@ msgstr "OK drücken zum Fortfahren."
 msgid "Press OK to activate the selected %s skin."
 msgstr "OK drücken, um den markierten Skin %s zu aktivieren."
 
-msgid "Press OK to activate the settings."
-msgstr "OK drücken zum Aktivieren."
-
 msgid "Press OK to edit the settings."
 msgstr "OK drücken zum Editieren."
 
@@ -8407,6 +8441,9 @@ msgstr "Drücken Sie OK, um die Auswahl umzuschalten."
 
 msgid "Press OK, save and exit..."
 msgstr "Drücke OK zum Speichern und Beenden..."
+
+msgid "Press green button to activate the settings."
+msgstr "Drücke die grüne Taste, um die Einstellungen zu aktivieren."
 
 msgid "Press or select button and then press 'OK' for attach function."
 msgstr "Drücken oder wählen Sie die Taste, und danach 'OK' drücken um die Funktion umzuschalten."
@@ -9025,6 +9062,9 @@ msgstr "Benutzeroberfläche jetzt neu starten?"
 
 msgid "Restart Network Adapter"
 msgstr "Neustart des Netzwerkadapters"
+
+msgid "Restart Sleeptimer"
+msgstr "Sleeptimer neu starten"
 
 msgid "Restart both"
 msgstr "Beide neustarten"
@@ -11055,14 +11095,20 @@ msgstr "Standby in "
 msgid "Start"
 msgstr "Start"
 
+msgid "Start CableScan"
+msgstr "Starte Kabel Suchlauf"
+
+msgid "Start Cablescan"
+msgstr "Starte Kabel Suchlauf"
+
+msgid "Start Fastscan"
+msgstr "Starte Fastscan"
+
 msgid "Start Sleeptimer"
 msgstr "Sleeptimer starten"
 
 msgid "Start directory"
 msgstr "Anfangsverzeichnis"
-
-msgid "Start fastscan"
-msgstr "Fastscan starten"
 
 msgid "Start from the beginning"
 msgstr "Am Anfang starten"
@@ -11100,11 +11146,15 @@ msgstr "Timeshift starten"
 msgid "Start with list screen"
 msgstr "Mit Liste beginnen"
 
-msgid "Start/Stop Sleeptimer"
-msgstr "Start/Stop Sleeptimer"
-
 msgid "Start/stop slide show"
 msgstr "Diashow starten / stoppen"
+
+msgid ""
+"Starting download of image file?\n"
+"Press OK to start or Exit to abort."
+msgstr ""
+"Download des Image starten?\n"
+"Drücke OK zum Starten oder Exit zum Abbrechen."
 
 msgid "Starting on"
 msgstr "Beginnend ab"
@@ -11504,8 +11554,9 @@ msgid "TEXT"
 msgstr "TEXT"
 
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
+#. Don't translate TRANSLATOR_INFO to show '(N/A)'
 msgid "TRANSLATOR_INFO"
-msgstr "ÜBERSETZER INFO"
+msgstr "TRANSLATOR_INFO"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "TS-Datei ist zu groß für ISO9660 level 1!"
@@ -12238,6 +12289,9 @@ msgstr ""
 msgid "Timer overview"
 msgstr "Timer-Übersicht"
 
+msgid "Timer recording failed. No space left on device!\n"
+msgstr "Timer-Aufnahme fehlgeschlagen. Kein Platz mehr auf dem Gerät!\n"
+
 msgid "Timer recording location"
 msgstr "Timer-Aufnahmeverzeichnis"
 
@@ -12392,6 +12446,9 @@ msgstr "Übersetzung"
 
 msgid "Translations Info"
 msgstr "Übersetzungsinformation"
+
+msgid "Translator comment"
+msgstr "Kommentar des Übersetzers"
 
 msgid "Transmission mode"
 msgstr "Übertragungstyp"
@@ -12804,6 +12861,9 @@ msgstr "Als PiP verwenden wenn möglich"
 
 msgid "Use circular LNB"
 msgstr "Benutze rundes LNB"
+
+msgid "Use default spinner"
+msgstr "Standard-Spinner verwenden"
 
 msgid "Use fastscan channel names"
 msgstr "Benutze Fast-Scan Kanalnamen"
@@ -13479,6 +13539,9 @@ msgstr "Sender können in mehreren Bouqets gruppiert werden."
 
 msgid "When enabled, show channel numbers in the channel selection screen."
 msgstr "Zeige Kanalnummer in Kanalauswahl."
+
+msgid "When enabled, spinners that come with the activated skin are ignored."
+msgstr "Wenn diese Option aktiviert ist, werden Spinner, die mit dem aktivierten Skin kommen, ignoriert."
 
 msgid "When enabled, subtitles for the hearing impaired can be used."
 msgstr "Bevorzuge Untertitel für Hörgeschädigte."
