--- a/po/et.po
+++ b/po/et.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-04 18:59+0200\n"
+"POT-Creation-Date: 2024-06-20 07:37+0200\n"
 "PO-Revision-Date: 2019-04-03 06:49+0300\n"
 "Last-Translator: \n"
 "Language-Team: Raivo, Henkka, eesatfan, rimas, zeros\\n faas, sateks, valgekotkas, tigekala, rootsikunn\\n kain, i70, mustkass, pelmeen, Scott\\n <digi-tv.ee>\n"
@@ -1298,6 +1298,14 @@ msgstr "Kas soovid väljuda seadistusabist?"
 #, fuzzy
 msgid "Are you sure you want to reload the EPG data from:\n"
 msgstr "Kas soovid väljuda seadistusabist?"
+
+#, fuzzy
+msgid ""
+"Are you sure you want to remove your wifi configuration?\n"
+"\n"
+msgstr ""
+"Kas tahad kindlasti võrgukaardi uuesti käivitada?\n"
+"\n"
 
 msgid ""
 "Are you sure you want to restart your network interfaces?\n"
@@ -2638,7 +2646,7 @@ msgstr ""
 msgid "Configure the duration in minutes for the screensaver."
 msgstr ""
 
-msgid "Configure the duration in minutes for the sleeptimer. Select this entry and click OK or green to start/stop the sleeptimer"
+msgid "Configure the duration in minutes for the sleeptimer. Select this entry and press blue to start/restart the sleeptimer or use yellow for stop active sleeptimer."
 msgstr ""
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
@@ -2847,10 +2855,6 @@ msgstr "Seadista sisemine LAN võrk"
 
 msgid "Configure your network again"
 msgstr "Seadista võrk uuesti"
-
-#, fuzzy
-msgid "Configure your network settings and press OK to scan"
-msgstr "Seadista võrk ja vajuta otsingu alustamiseks OK"
 
 msgid "Configure your wireless LAN again"
 msgstr "Seadista WiFi võrk uuesti"
@@ -3456,6 +3460,10 @@ msgid "Delete Image"
 msgstr "Kustuta fail"
 
 #, fuzzy
+msgid "Delete Wifi configuration"
+msgstr "Tuuneri seaded"
+
+#, fuzzy
 msgid "Delete all the text"
 msgstr "Kustuta esitusloendi kirje"
 
@@ -3500,6 +3508,10 @@ msgstr ""
 
 msgid "Delete the character under the text cursor"
 msgstr ""
+
+#, fuzzy
+msgid "Delete the current Wifi configuration.\n"
+msgstr "Jõusta praegused seaded"
 
 msgid "Delete the selected files or directories"
 msgstr ""
@@ -4556,6 +4568,10 @@ msgstr ""
 msgid "Error reading bouquets.tv"
 msgstr "salvesta muudatused ja välju"
 
+#, fuzzy
+msgid "Error removing your wifi configuration"
+msgstr "Filmilisti seaded"
+
 #, python-format
 msgid ""
 "Error renaming %s to %s:\n"
@@ -5065,6 +5081,10 @@ msgstr "Vali failid/kaustad varukoopiale"
 msgid "Filesystem check"
 msgstr "Failisüsteemi kontroll"
 
+#, fuzzy, python-format
+msgid "Filesystem: %s\n"
+msgstr "Failisüsteemi kontroll"
+
 msgid "Filter extension for 'My extension' setting of 'Filter extension'. Use the extension name without a '.'."
 msgstr ""
 
@@ -5098,6 +5118,10 @@ msgstr "Lõppenud"
 
 msgid "Finished configuring your network"
 msgstr "Lõpetasin võrgu seadistamise"
+
+#, fuzzy
+msgid "Finished removing your wifi configuration"
+msgstr "Võrgu restart on tehtud"
 
 msgid "Finished restarting your network"
 msgstr "Võrgu restart on tehtud"
@@ -5228,6 +5252,10 @@ msgstr "Kaadri suurus täisvaates"
 #, fuzzy
 msgid "France"
 msgstr "romantika"
+
+#, fuzzy, python-format
+msgid "Free: %s/%s\n"
+msgstr "Tüüp: "
 
 msgid "French"
 msgstr "Prantsuse"
@@ -6280,6 +6308,10 @@ msgstr "Sisemine flash-mälu"
 msgid "Internal flash"
 msgstr "Sisemine flash-mälu"
 
+#, fuzzy
+msgid "Internal flash storage:"
+msgstr "Sisemine flash-mälu"
+
 msgid "Internal hdd only"
 msgstr "Ainult sisesel kõvakettal"
 
@@ -7155,6 +7187,10 @@ msgstr "Haagi lahti"
 msgid "MountView"
 msgstr "Haagi lahti"
 
+#, fuzzy, python-format
+msgid "Mountpoint: %s (%s)\n"
+msgstr "Tüüp: "
+
 msgid "Mountpoints"
 msgstr ""
 
@@ -7621,6 +7657,10 @@ msgstr ""
 
 msgid "No backup needed"
 msgstr "Varukoopiat ei vajata"
+
+#, fuzzy
+msgid "No config items available"
+msgstr "Uuendusi ei ole"
 
 msgid ""
 "No data on transponder!\n"
@@ -8497,6 +8537,9 @@ msgstr ""
 msgid "Please connect your %s %s to the internet"
 msgstr "Ühenda vastuvõtja internetti"
 
+msgid "Please contact the manufacturer for clarification."
+msgstr ""
+
 msgid "Please do not change any values unless you know what you are doing!"
 msgstr "Palun ära muuda midagi seni, kuni oled kindel selles, mida teed!"
 
@@ -8977,9 +9020,6 @@ msgstr "Jätkamiseks vajuta OK."
 msgid "Press OK to activate the selected %s skin."
 msgstr "Vajuta OK uue välimuse aktiveerimiseks."
 
-msgid "Press OK to activate the settings."
-msgstr "Seadete aktiveerimiseks vajuta OK."
-
 msgid "Press OK to edit the settings."
 msgstr "Sätete muutmiseks vajuta OK."
 
@@ -9026,6 +9066,10 @@ msgstr "Valiku muutmiseks vajuta OK."
 
 msgid "Press OK, save and exit..."
 msgstr ""
+
+#, fuzzy
+msgid "Press green button to activate the settings."
+msgstr "Seadete aktiveerimiseks vajuta OK."
 
 msgid "Press or select button and then press 'OK' for attach function."
 msgstr ""
@@ -9701,6 +9745,10 @@ msgstr "Käivitame Enigma2 kohe uuesti?"
 #, fuzzy
 msgid "Restart Network Adapter"
 msgstr "Taaskäivita võrk "
+
+#, fuzzy
+msgid "Restart Sleeptimer"
+msgstr "Alustamise aeg"
 
 #, fuzzy
 msgid "Restart both"
@@ -11944,16 +11992,24 @@ msgid "Start"
 msgstr "Käivita test"
 
 #, fuzzy
+msgid "Start CableScan"
+msgstr "Kaabel TV otsing"
+
+#, fuzzy
+msgid "Start Cablescan"
+msgstr "Käivita test"
+
+#, fuzzy
+msgid "Start Fastscan"
+msgstr "Käivita test"
+
+#, fuzzy
 msgid "Start Sleeptimer"
 msgstr "Alustamise aeg"
 
 #, fuzzy
 msgid "Start directory"
 msgstr "juur kaust"
-
-#, fuzzy
-msgid "Start fastscan"
-msgstr "Käivita test"
 
 msgid "Start from the beginning"
 msgstr "Alusta algusest"
@@ -11994,11 +12050,12 @@ msgstr "Käivita ajanihe"
 msgid "Start with list screen"
 msgstr ""
 
-#, fuzzy
-msgid "Start/Stop Sleeptimer"
-msgstr "Alustamise aeg"
-
 msgid "Start/stop slide show"
+msgstr ""
+
+msgid ""
+"Starting download of image file?\n"
+"Press OK to start or Exit to abort."
 msgstr ""
 
 msgid "Starting on"
@@ -12437,8 +12494,9 @@ msgid "TEXT"
 msgstr ""
 
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
+#. Don't translate TRANSLATOR_INFO to show '(N/A)'
 msgid "TRANSLATOR_INFO"
-msgstr "TÕLKE_INFO"
+msgstr "TRANSLATOR_INFO"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "TS fail on liiga suur ISO9660/1-le!"
@@ -13164,6 +13222,10 @@ msgstr ""
 msgid "Timer overview"
 msgstr "Taimeri ülevaade"
 
+#, fuzzy
+msgid "Timer recording failed. No space left on device!\n"
+msgstr "Taimeri salvestuse asukoht"
+
 msgid "Timer recording location"
 msgstr "Taimeri salvestuse asukoht"
 
@@ -13330,6 +13392,10 @@ msgstr "Tõlked"
 #, fuzzy
 msgid "Translations Info"
 msgstr "Tõlked"
+
+#, fuzzy
+msgid "Translator comment"
+msgstr "Tõlge"
 
 msgid "Transmission mode"
 msgstr "Edastamise moodus"
@@ -13769,6 +13835,10 @@ msgstr ""
 #, fuzzy
 msgid "Use circular LNB"
 msgstr "ringpolarisatsioon vasak"
+
+#, fuzzy
+msgid "Use default spinner"
+msgstr "Kasutaja määratud"
 
 msgid "Use fastscan channel names"
 msgstr "Kasuta kiirotsingu kanalinimesi"
@@ -14480,6 +14550,10 @@ msgstr "Määrates 'jah', saad kasutada rohkem kui ühte lemmiknimekirja."
 
 msgid "When enabled, show channel numbers in the channel selection screen."
 msgstr "Määrates 'jah', näidatakse kanalinimekirjas kanalinumbreid."
+
+#, fuzzy
+msgid "When enabled, spinners that come with the activated skin are ignored."
+msgstr "Määrates 'jah', saab kasutada vaegkuuljatele mõeldud subtiitreid."
 
 msgid "When enabled, subtitles for the hearing impaired can be used."
 msgstr "Määrates 'jah', saab kasutada vaegkuuljatele mõeldud subtiitreid."
