--- a/po/fr.po
+++ b/po/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-04 18:59+0200\n"
+"POT-Creation-Date: 2024-06-20 07:37+0200\n"
 "PO-Revision-Date: 2021-12-06 10:46+0100\n"
 "Last-Translator: teamblue-e2 <teamblue-e2@online.de>\n"
 "Language-Team: \n"
@@ -1267,6 +1267,14 @@ msgstr "Êtes-vous sûr de vouloir quitter cet assistant ?"
 
 msgid "Are you sure you want to reload the EPG data from:\n"
 msgstr "Êtes-vous certains de vouloir effacer les données EPG de:\n"
+
+#, fuzzy
+msgid ""
+"Are you sure you want to remove your wifi configuration?\n"
+"\n"
+msgstr ""
+"Êtes-vous sûr de vouloir activer cette configuration réseau ?\n"
+"\n"
 
 msgid ""
 "Are you sure you want to restart your network interfaces?\n"
@@ -2564,7 +2572,8 @@ msgstr "Configure la durée en heures après laquelle le récepteur doit se mett
 msgid "Configure the duration in minutes for the screensaver."
 msgstr "Configurez la durée en minutes de l'économiseur d'écran."
 
-msgid "Configure the duration in minutes for the sleeptimer. Select this entry and click OK or green to start/stop the sleeptimer"
+#, fuzzy
+msgid "Configure the duration in minutes for the sleeptimer. Select this entry and press blue to start/restart the sleeptimer or use yellow for stop active sleeptimer."
 msgstr "Configure la durée en minutes du timer de sommeil. Sélectionner cette entrée et cliquer sur OK ou Vert pour démarrer/arrêter le timer de sommeil."
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
@@ -2771,9 +2780,6 @@ msgstr "Configurez votre réseau interne"
 
 msgid "Configure your network again"
 msgstr "Configurez votre réseau encore"
-
-msgid "Configure your network settings and press OK to scan"
-msgstr "Configure vos paramètres réseau, puis appuyez sur OK pour lancer la recherche"
 
 msgid "Configure your wireless LAN again"
 msgstr "Configurez votre LAN sans fil encore"
@@ -3360,6 +3366,10 @@ msgid "Delete Image"
 msgstr "Supprimer l’image"
 
 #, fuzzy
+msgid "Delete Wifi configuration"
+msgstr "Configuration d'OpenWebif"
+
+#, fuzzy
 msgid "Delete all the text"
 msgstr "Effacer tout le texte"
 
@@ -3404,6 +3414,10 @@ msgstr "Supprimer le caractère à gauche du curseur du texte"
 
 msgid "Delete the character under the text cursor"
 msgstr "Supprimer le caractère sous le curseur du texte"
+
+#, fuzzy
+msgid "Delete the current Wifi configuration.\n"
+msgstr "Activer la configuration actuelle"
 
 msgid "Delete the selected files or directories"
 msgstr "Supprimer les fichiers ou les répertoires sélectionnés"
@@ -4424,6 +4438,10 @@ msgstr "Erreur de lecture de bouquets.radio"
 msgid "Error reading bouquets.tv"
 msgstr "Erreur de lecture de bouquets.tv"
 
+#, fuzzy
+msgid "Error removing your wifi configuration"
+msgstr "Configuration de la Liste des Films"
+
 #, python-format
 msgid ""
 "Error renaming %s to %s:\n"
@@ -4922,6 +4940,10 @@ msgstr "Fichiers/dossiers à exclure de la sauvegarde"
 msgid "Filesystem check"
 msgstr "Vérification du système de fichiers"
 
+#, fuzzy, python-format
+msgid "Filesystem: %s\n"
+msgstr "Vérification du système de fichiers"
+
 msgid "Filter extension for 'My extension' setting of 'Filter extension'. Use the extension name without a '.'."
 msgstr "Extension du filtre pour le paramètre 'Mon extension' de 'Extension du filtre'. Utilisez le nom de l'extension sans '.'."
 
@@ -4955,6 +4977,10 @@ msgstr "Terminé"
 
 msgid "Finished configuring your network"
 msgstr "Termine la configuration de votre réseau"
+
+#, fuzzy
+msgid "Finished removing your wifi configuration"
+msgstr "Termine le redémarrage de votre réseau"
 
 msgid "Finished restarting your network"
 msgstr "Termine le redémarrage de votre réseau"
@@ -5085,6 +5111,10 @@ msgstr "Taille du cadre en plein écran"
 
 msgid "France"
 msgstr "France"
+
+#, fuzzy, python-format
+msgid "Free: %s/%s\n"
+msgstr "Modèle: %s %s\n"
 
 msgid "French"
 msgstr "Français"
@@ -6097,6 +6127,10 @@ msgstr "interne"
 msgid "Internal flash"
 msgstr "Flash interne"
 
+#, fuzzy
+msgid "Internal flash storage:"
+msgstr "Flash interne"
+
 msgid "Internal hdd only"
 msgstr "Disque dur interne seulement"
 
@@ -6945,6 +6979,10 @@ msgstr "MountEdit"
 msgid "MountView"
 msgstr "MountView"
 
+#, fuzzy, python-format
+msgid "Mountpoint: %s (%s)\n"
+msgstr "Points de montage"
+
 msgid "Mountpoints"
 msgstr "Points de montage"
 
@@ -7389,6 +7427,10 @@ msgstr "Pas de blocage sur l'âge"
 
 msgid "No backup needed"
 msgstr "Pas de sauvegarde nécessaire"
+
+#, fuzzy
+msgid "No config items available"
+msgstr "Aucune mise à jour disponible"
 
 msgid ""
 "No data on transponder!\n"
@@ -8211,6 +8253,9 @@ msgstr ""
 msgid "Please connect your %s %s to the internet"
 msgstr "Merci de connecter votre %s %s sur Internet"
 
+msgid "Please contact the manufacturer for clarification."
+msgstr ""
+
 msgid "Please do not change any values unless you know what you are doing!"
 msgstr "Veuillez ne changer aucune valeur si vous ne savez pas ce que vous faites !"
 
@@ -8667,9 +8712,6 @@ msgstr "Pressez OK sur la télécommande pour continuer."
 msgid "Press OK to activate the selected %s skin."
 msgstr "Appuyez sur OK pour activer la peau %s sélectionnée."
 
-msgid "Press OK to activate the settings."
-msgstr "Pressez OK pour activer les paramètres."
-
 msgid "Press OK to edit the settings."
 msgstr "Pressez OK pour éditer les paramètres."
 
@@ -8713,6 +8755,10 @@ msgstr "Pressez OK pour basculer le choix"
 
 msgid "Press OK, save and exit..."
 msgstr "Appuyer sur OK, sauvegarder et quitter…"
+
+#, fuzzy
+msgid "Press green button to activate the settings."
+msgstr "Pressez OK pour activer les paramètres."
 
 msgid "Press or select button and then press 'OK' for attach function."
 msgstr "Appuyez sur ou sélectionnez le bouton, puis appuyez sur «OK» pour attacher la fonction."
@@ -9362,6 +9408,10 @@ msgstr "Redémarrer l'interface graphique maintenant ?"
 #, fuzzy
 msgid "Restart Network Adapter"
 msgstr "Redémarrer l'adaptateur réseau"
+
+#, fuzzy
+msgid "Restart Sleeptimer"
+msgstr "Arrêt automatique"
 
 #, fuzzy
 msgid "Restart both"
@@ -11497,16 +11547,24 @@ msgid "Start"
 msgstr "Démarrer"
 
 #, fuzzy
+msgid "Start CableScan"
+msgstr "Scan du Cable"
+
+#, fuzzy
+msgid "Start Cablescan"
+msgstr "Lancer le test"
+
+#, fuzzy
+msgid "Start Fastscan"
+msgstr "Lancer le test"
+
+#, fuzzy
 msgid "Start Sleeptimer"
 msgstr "Arrêt automatique"
 
 #, fuzzy
 msgid "Start directory"
 msgstr "Répertoire de départ"
-
-#, fuzzy
-msgid "Start fastscan"
-msgstr "Lancer le test"
 
 msgid "Start from the beginning"
 msgstr "Démarrer depuis le début"
@@ -11545,12 +11603,13 @@ msgstr "Lancer PauseDirect"
 msgid "Start with list screen"
 msgstr "Commencer avec liste écran"
 
-#, fuzzy
-msgid "Start/Stop Sleeptimer"
-msgstr "Arrêt automatique en cas d'inactivité"
-
 msgid "Start/stop slide show"
 msgstr "Arrêter/Démarrer le diaporama"
+
+msgid ""
+"Starting download of image file?\n"
+"Press OK to start or Exit to abort."
+msgstr ""
 
 msgid "Starting on"
 msgstr "Démarre sur"
@@ -11970,6 +12029,7 @@ msgid "TEXT"
 msgstr "TEXTE"
 
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
+#. Don't translate TRANSLATOR_INFO to show '(N/A)'
 msgid "TRANSLATOR_INFO"
 msgstr ""
 "Traduction Française\n"
@@ -12723,6 +12783,10 @@ msgstr ""
 msgid "Timer overview"
 msgstr "Aperçu des programmations"
 
+#, fuzzy
+msgid "Timer recording failed. No space left on device!\n"
+msgstr "Emplacement enregistrements programmés"
+
 msgid "Timer recording location"
 msgstr "Emplacement enregistrements programmés"
 
@@ -12884,6 +12948,10 @@ msgstr "Traductions"
 #, fuzzy
 msgid "Translations Info"
 msgstr "Informations sur les traductions"
+
+#, fuzzy
+msgid "Translator comment"
+msgstr "Traduction"
 
 msgid "Transmission mode"
 msgstr "Mode de transmission"
@@ -13307,6 +13375,10 @@ msgstr "Utiliser comme PiP si possible"
 
 msgid "Use circular LNB"
 msgstr "Utiliser un LNB circulaire"
+
+#, fuzzy
+msgid "Use default spinner"
+msgstr "Défini par l'utilisateur"
 
 msgid "Use fastscan channel names"
 msgstr "Utiliser le scan rapide des noms des chaînes"
@@ -13999,6 +14071,10 @@ msgstr "Lorsqu'elle est activée, les services peuvent être regroupées en bouq
 
 msgid "When enabled, show channel numbers in the channel selection screen."
 msgstr "Lorsqu'elle est activée, afficher les numéros des chaines dans l'écran de sélection des chaines."
+
+#, fuzzy
+msgid "When enabled, spinners that come with the activated skin are ignored."
+msgstr "Lorsqu'elle est activée, les sous-titres pour les malentendants peuvent être utilisés."
 
 msgid "When enabled, subtitles for the hearing impaired can be used."
 msgstr "Lorsqu'elle est activée, les sous-titres pour les malentendants peuvent être utilisés."
