--- a/po/he.po
+++ b/po/he.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-04 18:59+0200\n"
+"POT-Creation-Date: 2024-06-20 07:37+0200\n"
 "PO-Revision-Date: 2012-03-08 10:40+0330\n"
 "Last-Translator: \n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -1386,6 +1386,14 @@ msgstr "? האם אתה מעוניין לצאת מהאשף"
 #, fuzzy
 msgid "Are you sure you want to reload the EPG data from:\n"
 msgstr "? האם אתה מעוניין לצאת מהאשף"
+
+#, fuzzy
+msgid ""
+"Are you sure you want to remove your wifi configuration?\n"
+"\n"
+msgstr ""
+"? האם אתה מעוניין להפעיל את הגדרות הרשת האלו\n"
+"\n"
 
 msgid ""
 "Are you sure you want to restart your network interfaces?\n"
@@ -2787,7 +2795,7 @@ msgstr ""
 msgid "Configure the duration in minutes for the screensaver."
 msgstr ""
 
-msgid "Configure the duration in minutes for the sleeptimer. Select this entry and click OK or green to start/stop the sleeptimer"
+msgid "Configure the duration in minutes for the sleeptimer. Select this entry and press blue to start/restart the sleeptimer or use yellow for stop active sleeptimer."
 msgstr ""
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
@@ -2996,10 +3004,6 @@ msgstr "הגדרת הרשת הפנימית שלך"
 
 msgid "Configure your network again"
 msgstr "הגדרת הרשת שלך שוב"
-
-#, fuzzy
-msgid "Configure your network settings and press OK to scan"
-msgstr "Press OK to activate the selected skin."
 
 msgid "Configure your wireless LAN again"
 msgstr "הגדרת הרשת האלחוטית שוב"
@@ -3626,6 +3630,10 @@ msgid "Delete Image"
 msgstr "מחק קובץ"
 
 #, fuzzy
+msgid "Delete Wifi configuration"
+msgstr "Tuner הגדרת"
+
+#, fuzzy
 msgid "Delete all the text"
 msgstr "delete playlist entry"
 
@@ -3675,6 +3683,10 @@ msgstr ""
 
 msgid "Delete the character under the text cursor"
 msgstr ""
+
+#, fuzzy
+msgid "Delete the current Wifi configuration.\n"
+msgstr "activate current configuration"
 
 msgid "Delete the selected files or directories"
 msgstr ""
@@ -4792,6 +4804,10 @@ msgstr ""
 msgid "Error reading bouquets.tv"
 msgstr "end bouquet edit"
 
+#, fuzzy
+msgid "Error removing your wifi configuration"
+msgstr "Tuner הגדרת"
+
 #, python-format
 msgid ""
 "Error renaming %s to %s:\n"
@@ -5329,6 +5345,10 @@ msgstr "Select files/folders to backup"
 msgid "Filesystem check"
 msgstr ""
 
+#, python-format
+msgid "Filesystem: %s\n"
+msgstr ""
+
 msgid "Filter extension for 'My extension' setting of 'Filter extension'. Use the extension name without a '.'."
 msgstr ""
 
@@ -5363,6 +5383,10 @@ msgstr "הסתיים"
 
 msgid "Finished configuring your network"
 msgstr "הגדרת הרשת הסתיימה"
+
+#, fuzzy
+msgid "Finished removing your wifi configuration"
+msgstr "פעולת איתחול הרשת הסתיימה"
 
 msgid "Finished restarting your network"
 msgstr "פעולת איתחול הרשת הסתיימה"
@@ -5493,6 +5517,11 @@ msgstr ""
 #, fuzzy
 msgid "France"
 msgstr "בטל"
+
+#
+#, fuzzy, python-format
+msgid "Free: %s/%s\n"
+msgstr ":דגם"
 
 #
 msgid "French"
@@ -6608,6 +6637,11 @@ msgstr " פנימי Flash"
 msgid "Internal flash"
 msgstr " פנימי Flash"
 
+#
+#, fuzzy
+msgid "Internal flash storage:"
+msgstr " פנימי Flash"
+
 msgid "Internal hdd only"
 msgstr ""
 
@@ -7584,6 +7618,11 @@ msgstr "ערוך"
 msgid "MountView"
 msgstr ""
 
+#
+#, fuzzy, python-format
+msgid "Mountpoint: %s (%s)\n"
+msgstr ":דגם"
+
 msgid "Mountpoints"
 msgstr ""
 
@@ -8078,6 +8117,11 @@ msgstr ""
 #
 msgid "No backup needed"
 msgstr "לא נדרש גיבוי"
+
+#
+#, fuzzy
+msgid "No config items available"
+msgstr "עדכונים זמינים"
 
 #
 msgid ""
@@ -9010,6 +9054,9 @@ msgstr ""
 msgid "Please connect your %s %s to the internet"
 msgstr ""
 
+msgid "Please contact the manufacturer for clarification."
+msgstr ""
+
 msgid "Please do not change any values unless you know what you are doing!"
 msgstr "Please do not change any values unless you know what you are doing!"
 
@@ -9517,10 +9564,6 @@ msgstr " על השלט על מנת להמשיך OK לחץ  "
 msgid "Press OK to activate the selected %s skin."
 msgstr "Press OK to activate the selected skin."
 
-#
-msgid "Press OK to activate the settings."
-msgstr "Press OK to activate the settings."
-
 msgid "Press OK to edit the settings."
 msgstr "Press OK to edit the settings."
 
@@ -9569,6 +9612,11 @@ msgstr "Press OK to toggle the selection."
 
 msgid "Press OK, save and exit..."
 msgstr ""
+
+#
+#, fuzzy
+msgid "Press green button to activate the settings."
+msgstr "Press OK to activate the settings."
 
 msgid "Press or select button and then press 'OK' for attach function."
 msgstr ""
@@ -10276,6 +10324,11 @@ msgstr "GUI ?איתחול עכשיו"
 #, fuzzy
 msgid "Restart Network Adapter"
 msgstr "איתחול רשת"
+
+#
+#, fuzzy
+msgid "Restart Sleeptimer"
+msgstr "זמן התחלה"
 
 #, fuzzy
 msgid "Restart both"
@@ -12702,17 +12755,27 @@ msgstr "התחל בדיקה"
 
 #
 #, fuzzy
+msgid "Start CableScan"
+msgstr "התחל בדיקה"
+
+#
+#, fuzzy
+msgid "Start Cablescan"
+msgstr "התחל בדיקה"
+
+#
+#, fuzzy
+msgid "Start Fastscan"
+msgstr "התחל בדיקה"
+
+#
+#, fuzzy
 msgid "Start Sleeptimer"
 msgstr "זמן התחלה"
 
 #, fuzzy
 msgid "Start directory"
 msgstr "התחל תיקיה"
-
-#
-#, fuzzy
-msgid "Start fastscan"
-msgstr "התחל בדיקה"
 
 #
 msgid "Start from the beginning"
@@ -12761,12 +12824,12 @@ msgstr "timeshift התחל"
 msgid "Start with list screen"
 msgstr ""
 
-#
-#, fuzzy
-msgid "Start/Stop Sleeptimer"
-msgstr "זמן התחלה"
-
 msgid "Start/stop slide show"
+msgstr ""
+
+msgid ""
+"Starting download of image file?\n"
+"Press OK to start or Exit to abort."
 msgstr ""
 
 msgid "Starting on"
@@ -13269,8 +13332,9 @@ msgstr ""
 
 #
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
+#. Don't translate TRANSLATOR_INFO to show '(N/A)'
 msgid "TRANSLATOR_INFO"
-msgstr ""
+msgstr "TRANSLATOR_INFO"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -14020,6 +14084,11 @@ msgstr "רשומת טיימר"
 
 #
 #, fuzzy
+msgid "Timer recording failed. No space left on device!\n"
+msgstr "מיקום הקלטה לטיימר"
+
+#
+#, fuzzy
 msgid "Timer recording location"
 msgstr "מיקום הקלטה לטיימר"
 
@@ -14209,6 +14278,11 @@ msgstr ""
 #
 #, fuzzy
 msgid "Translations Info"
+msgstr "תרגום"
+
+#
+#, fuzzy
+msgid "Translator comment"
 msgstr "תרגום"
 
 #
@@ -14676,6 +14750,11 @@ msgstr ""
 #, fuzzy
 msgid "Use circular LNB"
 msgstr "circular left"
+
+#
+#, fuzzy
+msgid "Use default spinner"
+msgstr "User defined"
 
 msgid "Use fastscan channel names"
 msgstr ""
@@ -15401,6 +15480,9 @@ msgid "When enabled, services may be grouped in multiple bouquets."
 msgstr ""
 
 msgid "When enabled, show channel numbers in the channel selection screen."
+msgstr ""
+
+msgid "When enabled, spinners that come with the activated skin are ignored."
 msgstr ""
 
 msgid "When enabled, subtitles for the hearing impaired can be used."
