--- a/po/hr.po
+++ b/po/hr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-04 18:59+0200\n"
+"POT-Creation-Date: 2024-06-20 07:37+0200\n"
 "PO-Revision-Date: 2020-03-03 08:50+0100\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
@@ -1436,6 +1436,15 @@ msgstr ""
 #
 #, fuzzy
 msgid "Are you sure you want to reload the EPG data from:\n"
+msgstr ""
+"Želite li stvarno vratiti sljedeću\n"
+"sigurnosnu kopiju:\n"
+
+#
+#, fuzzy
+msgid ""
+"Are you sure you want to remove your wifi configuration?\n"
+"\n"
 msgstr ""
 "Želite li stvarno vratiti sljedeću\n"
 "sigurnosnu kopiju:\n"
@@ -2901,7 +2910,7 @@ msgstr ""
 msgid "Configure the duration in minutes for the screensaver."
 msgstr ""
 
-msgid "Configure the duration in minutes for the sleeptimer. Select this entry and click OK or green to start/stop the sleeptimer"
+msgid "Configure the duration in minutes for the sleeptimer. Select this entry and press blue to start/restart the sleeptimer or use yellow for stop active sleeptimer."
 msgstr ""
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
@@ -3107,11 +3116,6 @@ msgstr ""
 #
 msgid "Configure your network again"
 msgstr ""
-
-#
-#, fuzzy
-msgid "Configure your network settings and press OK to scan"
-msgstr "Pritisnite OK za aktiviranje postavki."
 
 #
 msgid "Configure your wireless LAN again"
@@ -3791,6 +3795,11 @@ msgstr "Brisanje neuspješno!"
 
 #
 #, fuzzy
+msgid "Delete Wifi configuration"
+msgstr "Konfiguracija Tunera"
+
+#
+#, fuzzy
 msgid "Delete all the text"
 msgstr "obriši unos playliste"
 
@@ -3846,6 +3855,11 @@ msgstr ""
 
 msgid "Delete the character under the text cursor"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Delete the current Wifi configuration.\n"
+msgstr "Konfiguracija Tunera"
 
 msgid "Delete the selected files or directories"
 msgstr ""
@@ -5025,6 +5039,11 @@ msgstr ""
 msgid "Error reading bouquets.tv"
 msgstr "završi editiranje paketa"
 
+#
+#, fuzzy
+msgid "Error removing your wifi configuration"
+msgstr "Konfiguracija Tunera"
+
 #, python-format
 msgid ""
 "Error renaming %s to %s:\n"
@@ -5602,6 +5621,10 @@ msgstr ""
 msgid "Filesystem check"
 msgstr ""
 
+#, python-format
+msgid "Filesystem: %s\n"
+msgstr ""
+
 msgid "Filter extension for 'My extension' setting of 'Filter extension'. Use the extension name without a '.'."
 msgstr ""
 
@@ -5639,6 +5662,11 @@ msgstr ""
 #
 msgid "Finished configuring your network"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Finished removing your wifi configuration"
+msgstr "Konfiguracija Tunera"
 
 #
 msgid "Finished restarting your network"
@@ -5774,6 +5802,11 @@ msgstr ""
 #, fuzzy
 msgid "France"
 msgstr "Odustani"
+
+#
+#, fuzzy, python-format
+msgid "Free: %s/%s\n"
+msgstr "Model:"
 
 #
 msgid "French"
@@ -6941,6 +6974,11 @@ msgstr "Unutarnji Flash"
 msgid "Internal flash"
 msgstr "Unutarnji Flash"
 
+#
+#, fuzzy
+msgid "Internal flash storage:"
+msgstr "Unutarnji Flash"
+
 msgid "Internal hdd only"
 msgstr ""
 
@@ -7924,6 +7962,11 @@ msgstr ""
 msgid "MountView"
 msgstr ""
 
+#
+#, fuzzy, python-format
+msgid "Mountpoint: %s (%s)\n"
+msgstr "Model:"
+
 msgid "Mountpoints"
 msgstr ""
 
@@ -8458,6 +8501,9 @@ msgstr ""
 #
 msgid "No backup needed"
 msgstr "Sigurnosna kopija nije potrebana"
+
+msgid "No config items available"
+msgstr ""
 
 #
 msgid ""
@@ -9419,6 +9465,9 @@ msgstr ""
 msgid "Please connect your %s %s to the internet"
 msgstr ""
 
+msgid "Please contact the manufacturer for clarification."
+msgstr ""
+
 #
 msgid "Please do not change any values unless you know what you are doing!"
 msgstr "Molim ne mijenjate vrijednosti ukoliko ne znate što radite!"
@@ -9982,10 +10031,6 @@ msgid "Press OK to activate the selected %s skin."
 msgstr "Pritisnite OK za aktiviranje postavki."
 
 #
-msgid "Press OK to activate the settings."
-msgstr "Pritisnite OK za aktiviranje postavki."
-
-#
 msgid "Press OK to edit the settings."
 msgstr ""
 
@@ -10042,6 +10087,11 @@ msgstr ""
 
 msgid "Press OK, save and exit..."
 msgstr ""
+
+#
+#, fuzzy
+msgid "Press green button to activate the settings."
+msgstr "Pritisnite OK za aktiviranje postavki."
 
 msgid "Press or select button and then press 'OK' for attach function."
 msgstr ""
@@ -10821,6 +10871,11 @@ msgstr "Restart GUI sada?"
 #, fuzzy
 msgid "Restart Network Adapter"
 msgstr "Odaberi Mrežni adapter"
+
+#
+#, fuzzy
+msgid "Restart Sleeptimer"
+msgstr "Početno vrijeme "
 
 #
 #, fuzzy
@@ -13348,6 +13403,18 @@ msgstr ""
 msgid "Start"
 msgstr "Početno vrijeme "
 
+#, fuzzy
+msgid "Start CableScan"
+msgstr "Brzo pretraživanje"
+
+#, fuzzy
+msgid "Start Cablescan"
+msgstr "Brzo pretraživanje"
+
+#, fuzzy
+msgid "Start Fastscan"
+msgstr "Brzo pretraživanje"
+
 #
 #, fuzzy
 msgid "Start Sleeptimer"
@@ -13357,10 +13424,6 @@ msgstr "Početno vrijeme "
 #, fuzzy
 msgid "Start directory"
 msgstr "/var direktorij"
-
-#, fuzzy
-msgid "Start fastscan"
-msgstr "Brzo pretraživanje"
 
 #
 msgid "Start from the beginning"
@@ -13411,12 +13474,12 @@ msgstr "pokreni vrem.pomak"
 msgid "Start with list screen"
 msgstr ""
 
-#
-#, fuzzy
-msgid "Start/Stop Sleeptimer"
-msgstr "Početno vrijeme "
-
 msgid "Start/stop slide show"
+msgstr ""
+
+msgid ""
+"Starting download of image file?\n"
+"Press OK to start or Exit to abort."
 msgstr ""
 
 #
@@ -13936,8 +13999,9 @@ msgstr ""
 
 #
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
+#. Don't translate TRANSLATOR_INFO to show '(N/A)'
 msgid "TRANSLATOR_INFO"
-msgstr ""
+msgstr "TRANSLATOR_INFO"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -14657,6 +14721,11 @@ msgstr "Unos Tajmera"
 
 #
 #, fuzzy
+msgid "Timer recording failed. No space left on device!\n"
+msgstr "promjeni dužinu snimanja"
+
+#
+#, fuzzy
 msgid "Timer recording location"
 msgstr "promjeni dužinu snimanja"
 
@@ -14851,6 +14920,11 @@ msgstr ""
 #
 #, fuzzy
 msgid "Translations Info"
+msgstr "Prijevod"
+
+#
+#, fuzzy
+msgid "Translator comment"
 msgstr "Prijevod"
 
 #
@@ -15337,6 +15411,11 @@ msgstr ""
 #, fuzzy
 msgid "Use circular LNB"
 msgstr "lijevi cirkularni"
+
+#
+#, fuzzy
+msgid "Use default spinner"
+msgstr "Korisnički def"
 
 msgid "Use fastscan channel names"
 msgstr ""
@@ -16083,6 +16162,9 @@ msgid "When enabled, services may be grouped in multiple bouquets."
 msgstr ""
 
 msgid "When enabled, show channel numbers in the channel selection screen."
+msgstr ""
+
+msgid "When enabled, spinners that come with the activated skin are ignored."
 msgstr ""
 
 msgid "When enabled, subtitles for the hearing impaired can be used."
