--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-04 18:59+0200\n"
+"POT-Creation-Date: 2024-06-20 07:37+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Budiarno\n"
 "Language-Team: \n"
@@ -1282,6 +1282,14 @@ msgstr "Anda yakin ingin keluar dari wizard ini?"
 #, fuzzy
 msgid "Are you sure you want to reload the EPG data from:\n"
 msgstr "Anda yakin ingin keluar dari wizard ini?"
+
+#, fuzzy
+msgid ""
+"Are you sure you want to remove your wifi configuration?\n"
+"\n"
+msgstr ""
+"Anda yakin akan mengaktifkan setelan jaringan ini?\n"
+"\n"
 
 msgid ""
 "Are you sure you want to restart your network interfaces?\n"
@@ -2610,7 +2618,8 @@ msgstr "Atur durasi dalam jam Rx seharusnya menuju standby ketika Rx tidak dikon
 msgid "Configure the duration in minutes for the screensaver."
 msgstr "Atur durasi screensaver dalam hitungan menit."
 
-msgid "Configure the duration in minutes for the sleeptimer. Select this entry and click OK or green to start/stop the sleeptimer"
+#, fuzzy
+msgid "Configure the duration in minutes for the sleeptimer. Select this entry and press blue to start/restart the sleeptimer or use yellow for stop active sleeptimer."
 msgstr "Atur durasi dalam menit untuk pewaktu tidur. Pilih entri ini dan klik OK atau tombol hijau untuk mulai/hentikan pewaktu tidur"
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
@@ -2817,10 +2826,6 @@ msgstr "Atur LAN internal anda"
 
 msgid "Configure your network again"
 msgstr "Atur kembali jaringan anda"
-
-#, fuzzy
-msgid "Configure your network settings and press OK to scan"
-msgstr "Atur penyetelan jaringan anda, dan tekan OK untuk mulai memindai"
 
 msgid "Configure your wireless LAN again"
 msgstr "Atur kembali LAN nirkabel anda"
@@ -3424,6 +3429,10 @@ msgid "Delete Image"
 msgstr "Hapus pewaktu"
 
 #, fuzzy
+msgid "Delete Wifi configuration"
+msgstr "Penyetelan..."
+
+#, fuzzy
 msgid "Delete all the text"
 msgstr "Hapus entri daftar putar"
 
@@ -3468,6 +3477,10 @@ msgstr ""
 
 msgid "Delete the character under the text cursor"
 msgstr ""
+
+#, fuzzy
+msgid "Delete the current Wifi configuration.\n"
+msgstr "Aktifkan setelan saat ini"
 
 msgid "Delete the selected files or directories"
 msgstr ""
@@ -4525,6 +4538,10 @@ msgstr ""
 msgid "Error reading bouquets.tv"
 msgstr "akhiri ubah buket"
 
+#, fuzzy
+msgid "Error removing your wifi configuration"
+msgstr "Movie list configuration"
+
 #, python-format
 msgid ""
 "Error renaming %s to %s:\n"
@@ -5041,6 +5058,10 @@ msgstr "Select files/folders to backup"
 msgid "Filesystem check"
 msgstr "Filesystem check"
 
+#, fuzzy, python-format
+msgid "Filesystem: %s\n"
+msgstr "Filesystem check"
+
 msgid "Filter extension for 'My extension' setting of 'Filter extension'. Use the extension name without a '.'."
 msgstr ""
 
@@ -5073,6 +5094,10 @@ msgstr "Finished"
 
 msgid "Finished configuring your network"
 msgstr "Finished configuring your network"
+
+#, fuzzy
+msgid "Finished removing your wifi configuration"
+msgstr "Finished restarting your network"
 
 msgid "Finished restarting your network"
 msgstr "Finished restarting your network"
@@ -5203,6 +5228,10 @@ msgstr "Frame size in full view"
 #, fuzzy
 msgid "France"
 msgstr "romance"
+
+#, fuzzy, python-format
+msgid "Free: %s/%s\n"
+msgstr "Model: "
 
 msgid "French"
 msgstr "Perancis"
@@ -6249,6 +6278,10 @@ msgstr ""
 msgid "Internal flash"
 msgstr "Internal flash"
 
+#, fuzzy
+msgid "Internal flash storage:"
+msgstr "Internal flash"
+
 msgid "Internal hdd only"
 msgstr "Hdd internal saja"
 
@@ -7118,6 +7151,10 @@ msgstr "Mount"
 msgid "MountView"
 msgstr "Mount"
 
+#, fuzzy, python-format
+msgid "Mountpoint: %s (%s)\n"
+msgstr "Mount"
+
 #, fuzzy
 msgid "Mountpoints"
 msgstr "Mount"
@@ -7580,6 +7617,10 @@ msgstr ""
 
 msgid "No backup needed"
 msgstr "Backup tidak diperlukan"
+
+#, fuzzy
+msgid "No config items available"
+msgstr "Pembaruan tidak tersedia"
 
 msgid ""
 "No data on transponder!\n"
@@ -8440,6 +8481,9 @@ msgstr ""
 msgid "Please connect your %s %s to the internet"
 msgstr "Please connect your receiver to the internet"
 
+msgid "Please contact the manufacturer for clarification."
+msgstr ""
+
 msgid "Please do not change any values unless you know what you are doing!"
 msgstr "Please do not change any values unless you know what you are doing!"
 
@@ -8904,9 +8948,6 @@ msgstr "Tekan OK pada remote kontrol anda untuk melanjutkan."
 msgid "Press OK to activate the selected %s skin."
 msgstr "Tekan OK untuk mengaktifkan tampilan."
 
-msgid "Press OK to activate the settings."
-msgstr "Tekan OK untuk mengaktifkan pengaturan."
-
 msgid "Press OK to edit the settings."
 msgstr "Tekan OK untuk merubah pengaturan."
 
@@ -8953,6 +8994,10 @@ msgstr "Press OK to toggle the selection."
 
 msgid "Press OK, save and exit..."
 msgstr ""
+
+#, fuzzy
+msgid "Press green button to activate the settings."
+msgstr "Tekan OK untuk mengaktifkan pengaturan."
 
 msgid "Press or select button and then press 'OK' for attach function."
 msgstr ""
@@ -9602,6 +9647,10 @@ msgstr "Ingin Restart GUI sekarang?"
 #, fuzzy
 msgid "Restart Network Adapter"
 msgstr "Restart network"
+
+#, fuzzy
+msgid "Restart Sleeptimer"
+msgstr "Start time"
 
 #, fuzzy
 msgid "Restart both"
@@ -11811,16 +11860,24 @@ msgid "Start"
 msgstr "Mulai pengecekan"
 
 #, fuzzy
+msgid "Start CableScan"
+msgstr "Pelacakan Kabel"
+
+#, fuzzy
+msgid "Start Cablescan"
+msgstr "Mulai pengecekan"
+
+#, fuzzy
+msgid "Start Fastscan"
+msgstr "Mulai pengecekan"
+
+#, fuzzy
 msgid "Start Sleeptimer"
 msgstr "Start time"
 
 #, fuzzy
 msgid "Start directory"
 msgstr "start directory"
-
-#, fuzzy
-msgid "Start fastscan"
-msgstr "Mulai pengecekan"
 
 msgid "Start from the beginning"
 msgstr "Mulai dari awal"
@@ -11859,11 +11916,12 @@ msgstr "Start timeshift"
 msgid "Start with list screen"
 msgstr "Start with list screen"
 
-#, fuzzy
-msgid "Start/Stop Sleeptimer"
-msgstr "Start time"
-
 msgid "Start/stop slide show"
+msgstr ""
+
+msgid ""
+"Starting download of image file?\n"
+"Press OK to start or Exit to abort."
 msgstr ""
 
 msgid "Starting on"
@@ -12286,6 +12344,7 @@ msgid "TEXT"
 msgstr ""
 
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
+#. Don't translate TRANSLATOR_INFO to show '(N/A)'
 msgid "TRANSLATOR_INFO"
 msgstr "TRANSLATOR_INFO"
 
@@ -13013,6 +13072,10 @@ msgstr ""
 msgid "Timer overview"
 msgstr "Timer overview"
 
+#, fuzzy
+msgid "Timer recording failed. No space left on device!\n"
+msgstr "Timer recording location"
+
 msgid "Timer recording location"
 msgstr "Timer recording location"
 
@@ -13177,6 +13240,10 @@ msgstr "Translations"
 #, fuzzy
 msgid "Translations Info"
 msgstr "Translations"
+
+#, fuzzy
+msgid "Translator comment"
+msgstr "Translation"
 
 msgid "Transmission mode"
 msgstr "Transmission mode"
@@ -13613,6 +13680,10 @@ msgstr ""
 
 msgid "Use circular LNB"
 msgstr ""
+
+#, fuzzy
+msgid "Use default spinner"
+msgstr "Ditentukan pengguna"
 
 msgid "Use fastscan channel names"
 msgstr "Use fastscan channel names"
@@ -14316,6 +14387,10 @@ msgstr "Ketika diaktifkan, layanan bisa dikelompokkan dalam buket multi."
 
 msgid "When enabled, show channel numbers in the channel selection screen."
 msgstr "Ketika diaktifkan, akan menampilkan nomor kanal pada layar pemilihan kanal."
+
+#, fuzzy
+msgid "When enabled, spinners that come with the activated skin are ignored."
+msgstr "Ketika diaktifkan, teks film untuk tuna rungu bisa digunakan."
 
 msgid "When enabled, subtitles for the hearing impaired can be used."
 msgstr "Ketika diaktifkan, teks film untuk tuna rungu bisa digunakan."
