--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-04 18:59+0200\n"
+"POT-Creation-Date: 2024-06-20 07:37+0200\n"
 "PO-Revision-Date: 2021-11-30 12:39+0100\n"
 "Last-Translator: teamblue-e2 <teamblue-e2@online.de>\n"
 "Language-Team: www.linsat.net <spaeleus@croci.org>\n"
@@ -1398,6 +1398,15 @@ msgstr "Uscire da questa configurazione guidata?"
 #
 msgid "Are you sure you want to reload the EPG data from:\n"
 msgstr "Sei sicuro di voler ricaricare i dati EPG da:\n"
+
+#
+#, fuzzy
+msgid ""
+"Are you sure you want to remove your wifi configuration?\n"
+"\n"
+msgstr ""
+"Attivare queste impostazioni di rete?\n"
+"\n"
 
 #
 msgid ""
@@ -2845,7 +2854,8 @@ msgstr "Configurare la durata in ore in cui il ricevitore deve andare in standby
 msgid "Configure the duration in minutes for the screensaver."
 msgstr "Configura la durata in minuti per lo screensaver."
 
-msgid "Configure the duration in minutes for the sleeptimer. Select this entry and click OK or green to start/stop the sleeptimer"
+#, fuzzy
+msgid "Configure the duration in minutes for the sleeptimer. Select this entry and press blue to start/restart the sleeptimer or use yellow for stop active sleeptimer."
 msgstr "Configura la durata in minuti per il timer di spegnimento. Seleziona questa voce e fai clic su OK o verde per avviare/arrestare il timer di spegnimento"
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
@@ -3056,9 +3066,6 @@ msgstr "Configurare la LAN interna"
 #
 msgid "Configure your network again"
 msgstr "Configurare nuovamente la rete"
-
-msgid "Configure your network settings and press OK to scan"
-msgstr "Configura le impostazioni di rete e premi OK per eseguire la scansione"
 
 #
 msgid "Configure your wireless LAN again"
@@ -3696,6 +3703,11 @@ msgid "Delete Image"
 msgstr "Elimina immagine"
 
 #
+#, fuzzy
+msgid "Delete Wifi configuration"
+msgstr "Configurazione di OpenWebif"
+
+#
 msgid "Delete all the text"
 msgstr "Elimina tutto il testo"
 
@@ -3747,6 +3759,11 @@ msgstr "Elimina il carattere a sinistra del cursore del testo"
 
 msgid "Delete the character under the text cursor"
 msgstr "Elimina il carattere sotto il cursore del testo"
+
+#
+#, fuzzy
+msgid "Delete the current Wifi configuration.\n"
+msgstr "Attivare Le impostazioni correnti"
 
 msgid "Delete the selected files or directories"
 msgstr "Elimina i file o le directory selezionati"
@@ -4867,6 +4884,10 @@ msgstr "Errore nella lettura di bouquets.radio"
 msgid "Error reading bouquets.tv"
 msgstr "Errore di lettura di bouquets.tv"
 
+#, fuzzy
+msgid "Error removing your wifi configuration"
+msgstr "Impostazioni elenco registrazioni"
+
 #, python-format
 msgid ""
 "Error renaming %s to %s:\n"
@@ -5412,6 +5433,10 @@ msgstr "File/cartelle da escludere dal backup"
 msgid "Filesystem check"
 msgstr "Verifica filesystem"
 
+#, fuzzy, python-format
+msgid "Filesystem: %s\n"
+msgstr "Verifica filesystem"
+
 msgid "Filter extension for 'My extension' setting of 'Filter extension'. Use the extension name without a '.'."
 msgstr "Estensione del filtro per l'impostazione \"La mia estensione\" di \"Estensione del filtro\". Usa il nome dell'estensione senza un '."
 
@@ -5448,6 +5473,11 @@ msgstr "Terminato"
 #
 msgid "Finished configuring your network"
 msgstr "La configurazione di rete è terminata"
+
+#
+#, fuzzy
+msgid "Finished removing your wifi configuration"
+msgstr "Riavvio rete terminato"
 
 #
 msgid "Finished restarting your network"
@@ -5583,6 +5613,10 @@ msgstr "Dimensione frame in visualizzazione piena"
 
 msgid "France"
 msgstr "Francia"
+
+#, python-format
+msgid "Free: %s/%s\n"
+msgstr ""
 
 #
 msgid "French"
@@ -6686,6 +6720,11 @@ msgstr "Interno"
 msgid "Internal flash"
 msgstr "Flash interna"
 
+#
+#, fuzzy
+msgid "Internal flash storage:"
+msgstr "Flash interna"
+
 msgid "Internal hdd only"
 msgstr "Solo HDD interno"
 
@@ -7631,6 +7670,10 @@ msgstr "MountEdit"
 msgid "MountView"
 msgstr "MountView"
 
+#, fuzzy, python-format
+msgid "Mountpoint: %s (%s)\n"
+msgstr "Il punto di montaggio esiste!"
+
 msgid "Mountpoints"
 msgstr ""
 
@@ -8122,6 +8165,11 @@ msgstr ""
 #
 msgid "No backup needed"
 msgstr "Backup non necessario"
+
+#
+#, fuzzy
+msgid "No config items available"
+msgstr "Nessun aggiornamento disponibile"
 
 #
 msgid ""
@@ -9022,6 +9070,9 @@ msgstr ""
 msgid "Please connect your %s %s to the internet"
 msgstr "Collega il tuo %s %s a internet"
 
+msgid "Please contact the manufacturer for clarification."
+msgstr ""
+
 #
 msgid "Please do not change any values unless you know what you are doing!"
 msgstr "Non modificare alcun parametro se non si è certi di quello che si sta facendo!"
@@ -9549,10 +9600,6 @@ msgid "Press OK to activate the selected %s skin."
 msgstr "Premere OK per attivare la pelle selezionata %s."
 
 #
-msgid "Press OK to activate the settings."
-msgstr "Ok >> attivare configurazione."
-
-#
 msgid "Press OK to edit the settings."
 msgstr "Ok >> modificare la configurazione."
 
@@ -9605,6 +9652,11 @@ msgstr "Ok >> commutare la selezione."
 
 msgid "Press OK, save and exit..."
 msgstr ""
+
+#
+#, fuzzy
+msgid "Press green button to activate the settings."
+msgstr "Ok >> attivare configurazione."
 
 msgid "Press or select button and then press 'OK' for attach function."
 msgstr "Premere o selezionare il pulsante e poi premere 'OK' per allegare la funzione."
@@ -10332,6 +10384,10 @@ msgstr "Riavviare la GUI?"
 #
 msgid "Restart Network Adapter"
 msgstr "Riavviare l'adattatore di rete"
+
+#, fuzzy
+msgid "Restart Sleeptimer"
+msgstr "Timer di spegnimento"
 
 #
 msgid "Restart both"
@@ -12681,17 +12737,26 @@ msgid "Start"
 msgstr "Inizio"
 
 #, fuzzy
+msgid "Start CableScan"
+msgstr "Scansione su cavo"
+
+#
+#, fuzzy
+msgid "Start Cablescan"
+msgstr "Avviare il test"
+
+#
+#, fuzzy
+msgid "Start Fastscan"
+msgstr "Avviare il test"
+
+#, fuzzy
 msgid "Start Sleeptimer"
 msgstr "Timer di spegnimento"
 
 #
 msgid "Start directory"
 msgstr "Directory iniziale"
-
-#
-#, fuzzy
-msgid "Start fastscan"
-msgstr "Avviare il test"
 
 #
 msgid "Start from the beginning"
@@ -12737,12 +12802,13 @@ msgstr "Avviare timeshift"
 msgid "Start with list screen"
 msgstr "Avviare con schermata elenco"
 
-#, fuzzy
-msgid "Start/Stop Sleeptimer"
-msgstr "Inattività Sleeptimer"
-
 msgid "Start/stop slide show"
 msgstr "Avvia/arresta presentazione"
+
+msgid ""
+"Starting download of image file?\n"
+"Press OK to start or Exit to abort."
+msgstr ""
 
 #
 msgid "Starting on"
@@ -13199,6 +13265,7 @@ msgid "TEXT"
 msgstr "TESTO"
 
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
+#. Don't translate TRANSLATOR_INFO to show '(N/A)'
 msgid "TRANSLATOR_INFO"
 msgstr ""
 "Traduzione italiana\n"
@@ -14000,6 +14067,11 @@ msgid "Timer overview"
 msgstr "Panoramica timer"
 
 #
+#, fuzzy
+msgid "Timer recording failed. No space left on device!\n"
+msgstr "Destinazione timer registrazioni"
+
+#
 msgid "Timer recording location"
 msgstr "Destinazione timer registrazioni"
 
@@ -14181,6 +14253,11 @@ msgstr "Traduzioni"
 #
 msgid "Translations Info"
 msgstr "Informazioni sulle traduzioni"
+
+#
+#, fuzzy
+msgid "Translator comment"
+msgstr "Traduzione"
 
 #
 msgid "Transmission mode"
@@ -14648,6 +14725,11 @@ msgstr ""
 #
 msgid "Use circular LNB"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Use default spinner"
+msgstr "Definito dall'utente"
 
 msgid "Use fastscan channel names"
 msgstr "Utilizzare i nomi canale da scansione rapida"
@@ -15399,6 +15481,10 @@ msgstr "Opzione per abilitare il raggruppamento dei canali in bouquet multipli."
 
 msgid "When enabled, show channel numbers in the channel selection screen."
 msgstr "Opzione per abilitare la visualizzazione del numero del canale nella schermata di selezione canali."
+
+#, fuzzy
+msgid "When enabled, spinners that come with the activated skin are ignored."
+msgstr "Opzione per abilitare l'utilizzo dei sottotitoli per non udenti."
 
 msgid "When enabled, subtitles for the hearing impaired can be used."
 msgstr "Opzione per abilitare l'utilizzo dei sottotitoli per non udenti."
