--- a/po/lv.po
+++ b/po/lv.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-04 18:59+0200\n"
+"POT-Creation-Date: 2024-06-20 07:37+0200\n"
 "PO-Revision-Date: 2014-11-12 00:49+0200\n"
 "Last-Translator: Taapat <taapat@gmail.com>\n"
 "Language-Team: Taapat <taapat@gmail.com>\n"
@@ -1317,6 +1317,14 @@ msgstr "Vai tiešām vēlaties iziet no šī veidņa?"
 #, fuzzy
 msgid "Are you sure you want to reload the EPG data from:\n"
 msgstr "Vai tiešām vēlaties iziet no šī veidņa?"
+
+#, fuzzy
+msgid ""
+"Are you sure you want to remove your wifi configuration?\n"
+"\n"
+msgstr ""
+"Vai tiešām vēlaties aktivizēt šo tīkla konfigurāciju?\n"
+"\n"
 
 msgid ""
 "Are you sure you want to restart your network interfaces?\n"
@@ -2660,7 +2668,7 @@ msgstr ""
 msgid "Configure the duration in minutes for the screensaver."
 msgstr "Uzstāda laiku minūtēs ekrānsaudzētājam."
 
-msgid "Configure the duration in minutes for the sleeptimer. Select this entry and click OK or green to start/stop the sleeptimer"
+msgid "Configure the duration in minutes for the sleeptimer. Select this entry and press blue to start/restart the sleeptimer or use yellow for stop active sleeptimer."
 msgstr ""
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
@@ -2869,10 +2877,6 @@ msgstr "Uzstādīt jūsu tīklu (LAN)"
 
 msgid "Configure your network again"
 msgstr "Atkārtoti uzstādīt jūsu tīklu"
-
-#, fuzzy
-msgid "Configure your network settings and press OK to scan"
-msgstr "Uztādiet jūsu tīkla iestatījumus un nospiediet OK lai sāktu pārbaudi"
 
 msgid "Configure your wireless LAN again"
 msgstr "Atkārtoti uzstāda jūsu bezvadu tīklu"
@@ -3478,6 +3482,10 @@ msgid "Delete Image"
 msgstr "Dzēst failu"
 
 #, fuzzy
+msgid "Delete Wifi configuration"
+msgstr "Uztvērēja konfigurācija"
+
+#, fuzzy
 msgid "Delete all the text"
 msgstr "Dzēst repertuāra ierakstu"
 
@@ -3522,6 +3530,10 @@ msgstr ""
 
 msgid "Delete the character under the text cursor"
 msgstr ""
+
+#, fuzzy
+msgid "Delete the current Wifi configuration.\n"
+msgstr "Aktivizēt pašreizējo konfigurāciju"
 
 msgid "Delete the selected files or directories"
 msgstr ""
@@ -4584,6 +4596,10 @@ msgstr ""
 msgid "Error reading bouquets.tv"
 msgstr "beigt buķešu rediģēšanu"
 
+#, fuzzy
+msgid "Error removing your wifi configuration"
+msgstr "Filmu saraksta konfigurācija"
+
 #, python-format
 msgid ""
 "Error renaming %s to %s:\n"
@@ -5106,6 +5122,10 @@ msgstr "Izvēlieties failus/mapes dublējumkopijai"
 msgid "Filesystem check"
 msgstr "Failsistēmas pārbaude"
 
+#, fuzzy, python-format
+msgid "Filesystem: %s\n"
+msgstr "Failsistēmas pārbaude"
+
 msgid "Filter extension for 'My extension' setting of 'Filter extension'. Use the extension name without a '.'."
 msgstr ""
 
@@ -5139,6 +5159,10 @@ msgstr "Pabeigts"
 
 msgid "Finished configuring your network"
 msgstr "Tīkla konfigurēšana pabeigta"
+
+#, fuzzy
+msgid "Finished removing your wifi configuration"
+msgstr "Tīkla pārstartēšana pabeigta"
 
 msgid "Finished restarting your network"
 msgstr "Tīkla pārstartēšana pabeigta"
@@ -5269,6 +5293,10 @@ msgstr "Kadra izmērs pilnskatā"
 #, fuzzy
 msgid "France"
 msgstr "romance"
+
+#, fuzzy, python-format
+msgid "Free: %s/%s\n"
+msgstr "Modelis: "
 
 msgid "French"
 msgstr "Franču"
@@ -6323,6 +6351,10 @@ msgstr "Iekšējā atmiņa"
 msgid "Internal flash"
 msgstr "Iekšējā atmiņa"
 
+#, fuzzy
+msgid "Internal flash storage:"
+msgstr "Iekšējā atmiņa"
+
 msgid "Internal hdd only"
 msgstr "Tikai iekšējais hdd"
 
@@ -7198,6 +7230,10 @@ msgstr "Montēt"
 msgid "MountView"
 msgstr "Montēt"
 
+#, fuzzy, python-format
+msgid "Mountpoint: %s (%s)\n"
+msgstr "Montēt"
+
 #, fuzzy
 msgid "Mountpoints"
 msgstr "Montēt"
@@ -7667,6 +7703,10 @@ msgstr ""
 
 msgid "No backup needed"
 msgstr "Dublējumkopija nav neieciešama"
+
+#, fuzzy
+msgid "No config items available"
+msgstr "Atjaunojumi nav pieejami"
 
 msgid ""
 "No data on transponder!\n"
@@ -8545,6 +8585,9 @@ msgstr ""
 msgid "Please connect your %s %s to the internet"
 msgstr "Lūdzu pieslēdziet uztvērēju internetam"
 
+msgid "Please contact the manufacturer for clarification."
+msgstr ""
+
 msgid "Please do not change any values unless you know what you are doing!"
 msgstr "Lūdzu nemainiet jebkādas vērtības, izņemot ja skaidri apzināties ko darāt!"
 
@@ -9025,9 +9068,6 @@ msgstr "Spiediet OK uz tālvadības pults, lai turpinātu."
 msgid "Press OK to activate the selected %s skin."
 msgstr "Spiediet OK lai aktivizētu izvēlēto ādiņu."
 
-msgid "Press OK to activate the settings."
-msgstr "Spiediet OK, lai aktivizētu iestatījumus."
-
 msgid "Press OK to edit the settings."
 msgstr "Spiediet OK, lai rediģētu iestatījumus."
 
@@ -9074,6 +9114,10 @@ msgstr "Nospiediet OK, lai pārslēgtu izvēli."
 
 msgid "Press OK, save and exit..."
 msgstr ""
+
+#, fuzzy
+msgid "Press green button to activate the settings."
+msgstr "Spiediet OK, lai aktivizētu iestatījumus."
 
 msgid "Press or select button and then press 'OK' for attach function."
 msgstr ""
@@ -9749,6 +9793,10 @@ msgstr "Pārstartēt GUI tagad?"
 #, fuzzy
 msgid "Restart Network Adapter"
 msgstr "Pārstartēt tīklu"
+
+#, fuzzy
+msgid "Restart Sleeptimer"
+msgstr "Miega taimeris"
 
 #, fuzzy
 msgid "Restart both"
@@ -12005,16 +12053,24 @@ msgid "Start"
 msgstr "Sākt pārbaudi"
 
 #, fuzzy
+msgid "Start CableScan"
+msgstr "Kabeļu meklēšana"
+
+#, fuzzy
+msgid "Start Cablescan"
+msgstr "Sākt pārbaudi"
+
+#, fuzzy
+msgid "Start Fastscan"
+msgstr "Sākt pārbaudi"
+
+#, fuzzy
 msgid "Start Sleeptimer"
 msgstr "Miega taimeris"
 
 #, fuzzy
 msgid "Start directory"
 msgstr "sākuma mape"
-
-#, fuzzy
-msgid "Start fastscan"
-msgstr "Sākt pārbaudi"
 
 msgid "Start from the beginning"
 msgstr "Sākt no sākuma"
@@ -12055,11 +12111,12 @@ msgstr "Sākt laika aizturi"
 msgid "Start with list screen"
 msgstr "Sākt ar saraksta logu"
 
-#, fuzzy
-msgid "Start/Stop Sleeptimer"
-msgstr "Neaktivitātes miega taimeris"
-
 msgid "Start/stop slide show"
+msgstr ""
+
+msgid ""
+"Starting download of image file?\n"
+"Press OK to start or Exit to abort."
 msgstr ""
 
 msgid "Starting on"
@@ -12500,6 +12557,7 @@ msgid "TEXT"
 msgstr ""
 
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
+#. Don't translate TRANSLATOR_INFO to show '(N/A)'
 msgid "TRANSLATOR_INFO"
 msgstr "Taapat, Madars Auns Latvija, Talsi"
 
@@ -13229,6 +13287,10 @@ msgstr ""
 msgid "Timer overview"
 msgstr "Taimera pārskats"
 
+#, fuzzy
+msgid "Timer recording failed. No space left on device!\n"
+msgstr "Taimera ieraksta vieta"
+
 msgid "Timer recording location"
 msgstr "Taimera ieraksta vieta"
 
@@ -13395,6 +13457,10 @@ msgstr "Tulkojumi"
 #, fuzzy
 msgid "Translations Info"
 msgstr "Tulkojumi"
+
+#, fuzzy
+msgid "Translator comment"
+msgstr "Tulkojums"
 
 msgid "Transmission mode"
 msgstr "Pārraides režīms"
@@ -13836,6 +13902,10 @@ msgstr ""
 #, fuzzy
 msgid "Use circular LNB"
 msgstr "cirkulārā kreisā"
+
+#, fuzzy
+msgid "Use default spinner"
+msgstr "Lietotāja definēts"
 
 msgid "Use fastscan channel names"
 msgstr "Lietot ātrās meklēšanas kanālu nosaukumus"
@@ -14551,6 +14621,10 @@ msgstr "Ja iespējots, kanāli tiks sagrupēti dažādās buķetēs."
 
 msgid "When enabled, show channel numbers in the channel selection screen."
 msgstr "Ja iespējots, kanālu pārslēgšanas logā tiks parādīti kanālu numuri."
+
+#, fuzzy
+msgid "When enabled, spinners that come with the activated skin are ignored."
+msgstr "Ja iespējots, tiks lietoti subtitri cilvēkiem ar dzirdes traucējumiem."
 
 msgid "When enabled, subtitles for the hearing impaired can be used."
 msgstr "Ja iespējots, tiks lietoti subtitri cilvēkiem ar dzirdes traucējumiem."
