--- a/po/nn.po
+++ b/po/nn.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-04 18:59+0200\n"
+"POT-Creation-Date: 2024-06-20 07:37+0200\n"
 "PO-Revision-Date: 2013-10-23 19:15+0100\n"
 "Last-Translator: andy1 <dmmm8000pvr@gmail.com>\n"
 "Language-Team: none\n"
@@ -1365,6 +1365,14 @@ msgstr "Vil du avslutte veiviseren?"
 #, fuzzy
 msgid "Are you sure you want to reload the EPG data from:\n"
 msgstr "Vil du avslutte veiviseren?"
+
+#, fuzzy
+msgid ""
+"Are you sure you want to remove your wifi configuration?\n"
+"\n"
+msgstr ""
+"Vil du bruke dette nettverksoppsettet?\n"
+"\n"
 
 msgid ""
 "Are you sure you want to restart your network interfaces?\n"
@@ -2802,7 +2810,7 @@ msgstr ""
 msgid "Configure the duration in minutes for the screensaver."
 msgstr "Still inn skjermsparerens varighet i minutter."
 
-msgid "Configure the duration in minutes for the sleeptimer. Select this entry and click OK or green to start/stop the sleeptimer"
+msgid "Configure the duration in minutes for the sleeptimer. Select this entry and press blue to start/restart the sleeptimer or use yellow for stop active sleeptimer."
 msgstr ""
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
@@ -3011,10 +3019,6 @@ msgstr "Still inn ditt lokale LAN nettverk"
 #
 msgid "Configure your network again"
 msgstr "Still inn nettverket på nytt"
-
-#, fuzzy
-msgid "Configure your network settings and press OK to scan"
-msgstr "Still inn nettverksinnstillingene, og trykk OK for å starte søket"
 
 msgid "Configure your wireless LAN again"
 msgstr "Still inn det trådløse nettverket igjen"
@@ -3670,6 +3674,11 @@ msgstr "Slette fil"
 
 #
 #, fuzzy
+msgid "Delete Wifi configuration"
+msgstr "Konfigurasjon..."
+
+#
+#, fuzzy
 msgid "Delete all the text"
 msgstr "Slette oppføring i spilliste"
 
@@ -3722,6 +3731,11 @@ msgstr ""
 
 msgid "Delete the character under the text cursor"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Delete the current Wifi configuration.\n"
+msgstr "Aktivere gjeldende konfigurasjon"
 
 msgid "Delete the selected files or directories"
 msgstr ""
@@ -4874,6 +4888,10 @@ msgstr ""
 msgid "Error reading bouquets.tv"
 msgstr "avslutt redigering av kanalliste"
 
+#, fuzzy
+msgid "Error removing your wifi configuration"
+msgstr "Innstilling for opptaksliste"
+
 #, python-format
 msgid ""
 "Error renaming %s to %s:\n"
@@ -5417,6 +5435,10 @@ msgstr "Velg filer/mapper for sikkerhetskopiering"
 msgid "Filesystem check"
 msgstr "Sjekk av filsystem"
 
+#, fuzzy, python-format
+msgid "Filesystem: %s\n"
+msgstr "Sjekk av filsystem"
+
 msgid "Filter extension for 'My extension' setting of 'Filter extension'. Use the extension name without a '.'."
 msgstr ""
 
@@ -5450,6 +5472,10 @@ msgstr "Ferdig"
 
 msgid "Finished configuring your network"
 msgstr "Nettverksoppsettet er konfigurert"
+
+#, fuzzy
+msgid "Finished removing your wifi configuration"
+msgstr "Nettverket ble startet på nytt"
 
 msgid "Finished restarting your network"
 msgstr "Nettverket ble startet på nytt"
@@ -5586,6 +5612,11 @@ msgstr "Rammestørrelse i fullvisning"
 #, fuzzy
 msgid "France"
 msgstr "romantikk"
+
+#
+#, fuzzy, python-format
+msgid "Free: %s/%s\n"
+msgstr "Modell:"
 
 #
 msgid "French"
@@ -6719,6 +6750,11 @@ msgstr ""
 msgid "Internal flash"
 msgstr "Internt flash"
 
+#
+#, fuzzy
+msgid "Internal flash storage:"
+msgstr "Internt flash"
+
 msgid "Internal hdd only"
 msgstr "Bare for intern hdd/ssd"
 
@@ -7677,6 +7713,10 @@ msgstr "Montere"
 msgid "MountView"
 msgstr "Montere"
 
+#, fuzzy, python-format
+msgid "Mountpoint: %s (%s)\n"
+msgstr "Montere"
+
 #, fuzzy
 msgid "Mountpoints"
 msgstr "Montere"
@@ -8190,6 +8230,10 @@ msgstr ""
 #
 msgid "No backup needed"
 msgstr "Ingen sikkerhetskopi er nødvendig"
+
+#, fuzzy
+msgid "No config items available"
+msgstr "Det finnes ingen nye oppdateringer"
 
 #
 msgid ""
@@ -9125,6 +9169,9 @@ msgstr ""
 msgid "Please connect your %s %s to the internet"
 msgstr "Vennligst, koble mottakeren til internett"
 
+msgid "Please contact the manufacturer for clarification."
+msgstr ""
+
 #
 msgid "Please do not change any values unless you know what you are doing!"
 msgstr "Vennligst ikke endre verdier, hvis du ikke vet hva du gjør!"
@@ -9646,9 +9693,6 @@ msgstr "Trykk OK for å fortsette."
 msgid "Press OK to activate the selected %s skin."
 msgstr "Trykk OK for å ta i bruk det valgte skin."
 
-msgid "Press OK to activate the settings."
-msgstr "Trykk OK for å aktivere instillingene"
-
 msgid "Press OK to edit the settings."
 msgstr "Trykk OK for å endre innstillinger."
 
@@ -9695,6 +9739,10 @@ msgstr "Trykk OK for å veksle mellom valgene."
 
 msgid "Press OK, save and exit..."
 msgstr ""
+
+#, fuzzy
+msgid "Press green button to activate the settings."
+msgstr "Trykk OK for å aktivere instillingene"
 
 msgid "Press or select button and then press 'OK' for attach function."
 msgstr ""
@@ -10401,6 +10449,10 @@ msgstr "Starte GUI på nytt?"
 #, fuzzy
 msgid "Restart Network Adapter"
 msgstr "Starte nettverk på nytt"
+
+#, fuzzy
+msgid "Restart Sleeptimer"
+msgstr "Tidtaker"
 
 #, fuzzy
 msgid "Restart both"
@@ -12772,16 +12824,24 @@ msgid "Start"
 msgstr "Starttid"
 
 #, fuzzy
+msgid "Start CableScan"
+msgstr "Kabel-TV søk"
+
+#, fuzzy
+msgid "Start Cablescan"
+msgstr "Hurtigsøk"
+
+#, fuzzy
+msgid "Start Fastscan"
+msgstr "Hurtigsøk"
+
+#, fuzzy
 msgid "Start Sleeptimer"
 msgstr "Tidtaker"
 
 #, fuzzy
 msgid "Start directory"
 msgstr "start katalog"
-
-#, fuzzy
-msgid "Start fastscan"
-msgstr "Hurtigsøk"
 
 #
 msgid "Start from the beginning"
@@ -12825,11 +12885,12 @@ msgstr "Starte tidsskift"
 msgid "Start with list screen"
 msgstr "Start med listevisning"
 
-#, fuzzy
-msgid "Start/Stop Sleeptimer"
-msgstr "Inaktivitets tidtaker"
-
 msgid "Start/stop slide show"
+msgstr ""
+
+msgid ""
+"Starting download of image file?\n"
+"Press OK to start or Exit to abort."
 msgstr ""
 
 #
@@ -13292,6 +13353,7 @@ msgid "TEXT"
 msgstr ""
 
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
+#. Don't translate TRANSLATOR_INFO to show '(N/A)'
 msgid "TRANSLATOR_INFO"
 msgstr "Norsk bokmålsoversettelse. 24.10.2013"
 
@@ -14070,6 +14132,10 @@ msgstr ""
 msgid "Timer overview"
 msgstr "Tidtaker oversikt"
 
+#, fuzzy
+msgid "Timer recording failed. No space left on device!\n"
+msgstr "Tidtaker opptak"
+
 msgid "Timer recording location"
 msgstr "Tidtaker opptak"
 
@@ -14260,6 +14326,11 @@ msgstr "Oversettinger"
 #, fuzzy
 msgid "Translations Info"
 msgstr "Oversettinger"
+
+#
+#, fuzzy
+msgid "Translator comment"
+msgstr "Oversetting"
 
 #
 msgid "Transmission mode"
@@ -14730,6 +14801,11 @@ msgstr ""
 
 msgid "Use circular LNB"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Use default spinner"
+msgstr "Brukerdefinert"
 
 msgid "Use fastscan channel names"
 msgstr "Bruk kanaler beregnet for 'fastscan'"
@@ -15476,6 +15552,10 @@ msgstr "Når dette er valgt, vil kanalene kunne grupperes i flere kanallister."
 
 msgid "When enabled, show channel numbers in the channel selection screen."
 msgstr "Når dette er valgt, vises kanalnummer på kanalvalgs skjermen"
+
+#, fuzzy
+msgid "When enabled, spinners that come with the activated skin are ignored."
+msgstr "Når dette er valgt, kan undertekst for hørselshemmede brukes."
 
 msgid "When enabled, subtitles for the hearing impaired can be used."
 msgstr "Når dette er valgt, kan undertekst for hørselshemmede brukes."
