--- a/po/pt.po
+++ b/po/pt.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-04 18:59+0200\n"
+"POT-Creation-Date: 2024-06-20 07:37+0200\n"
 "PO-Revision-Date: 2014-12-15 19:38-0000\n"
 "Last-Translator: Phenom <phenomxy@gmail.com>\n"
 "Language-Team: Muaitai <muaitai@gmail.com>\n"
@@ -1471,6 +1471,15 @@ msgstr "Tem a certeza que deseja sair deste assistente?"
 #, fuzzy
 msgid "Are you sure you want to reload the EPG data from:\n"
 msgstr "Tem a certeza que deseja sair deste assistente?"
+
+#
+#, fuzzy
+msgid ""
+"Are you sure you want to remove your wifi configuration?\n"
+"\n"
+msgstr ""
+"Tem a certeza que deseja activar esta configuração de rede?\n"
+"\n"
 
 #
 msgid ""
@@ -2990,7 +2999,8 @@ msgstr "Configurar a duração em horas após a última interacção, em que o r
 msgid "Configure the duration in minutes for the screensaver."
 msgstr "Configurar a duração em minutos para activar o protector de ecrã."
 
-msgid "Configure the duration in minutes for the sleeptimer. Select this entry and click OK or green to start/stop the sleeptimer"
+#, fuzzy
+msgid "Configure the duration in minutes for the sleeptimer. Select this entry and press blue to start/restart the sleeptimer or use yellow for stop active sleeptimer."
 msgstr "Configurar a duração em minutos para o temporizador. Seleccione esta entrada e pressione OK ou verde para iniciar/parar o temporizador."
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
@@ -3218,10 +3228,6 @@ msgstr "Configure a sua rede LAN interna"
 #
 msgid "Configure your network again"
 msgstr "Configure a sua rede outra vez"
-
-#, fuzzy
-msgid "Configure your network settings and press OK to scan"
-msgstr "Configure as opções de rede, prima OK para iniciar a pesquisa"
 
 #
 msgid "Configure your wireless LAN again"
@@ -3911,6 +3917,11 @@ msgstr "Eliminar agendamento"
 
 #
 #, fuzzy
+msgid "Delete Wifi configuration"
+msgstr "Configuração do sintonizador"
+
+#
+#, fuzzy
 msgid "Delete all the text"
 msgstr "Eliminar entrada da Lista de Reprodução"
 
@@ -3965,6 +3976,11 @@ msgstr ""
 
 msgid "Delete the character under the text cursor"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Delete the current Wifi configuration.\n"
+msgstr "Activar configuração actual"
 
 msgid "Delete the selected files or directories"
 msgstr ""
@@ -5171,6 +5187,10 @@ msgstr ""
 msgid "Error reading bouquets.tv"
 msgstr "terminar edição de Bouquet"
 
+#, fuzzy
+msgid "Error removing your wifi configuration"
+msgstr "Configuração da Lista de Vídeos"
+
 #, python-format
 msgid ""
 "Error renaming %s to %s:\n"
@@ -5757,6 +5777,11 @@ msgstr "Seleccione ficheiros/directórios para Backup"
 msgid "Filesystem check"
 msgstr "Verificação do sistema de ficheiros"
 
+#
+#, fuzzy, python-format
+msgid "Filesystem: %s\n"
+msgstr "Verificação do sistema de ficheiros"
+
 msgid "Filter extension for 'My extension' setting of 'Filter extension'. Use the extension name without a '.'."
 msgstr ""
 
@@ -5794,6 +5819,11 @@ msgstr "Concluído"
 #
 msgid "Finished configuring your network"
 msgstr "Terminou a configuração de rede"
+
+#
+#, fuzzy
+msgid "Finished removing your wifi configuration"
+msgstr "Terminou a reinicialização de rede"
 
 #
 msgid "Finished restarting your network"
@@ -5936,6 +5966,11 @@ msgstr "Tamanho da janela em vista completa"
 #, fuzzy
 msgid "France"
 msgstr "romance"
+
+#
+#, fuzzy, python-format
+msgid "Free: %s/%s\n"
+msgstr "Modelo: "
 
 #
 msgid "French"
@@ -7123,6 +7158,11 @@ msgstr "Flash interna"
 msgid "Internal flash"
 msgstr "Flash interna"
 
+#
+#, fuzzy
+msgid "Internal flash storage:"
+msgstr "Flash interna"
+
 msgid "Internal hdd only"
 msgstr "Apenas no disco rígido interno"
 
@@ -8143,6 +8183,10 @@ msgstr "Montagem"
 msgid "MountView"
 msgstr "Montagem"
 
+#, fuzzy, python-format
+msgid "Mountpoint: %s (%s)\n"
+msgstr "Montagem"
+
 #, fuzzy
 msgid "Mountpoints"
 msgstr "Montagem"
@@ -8674,6 +8718,11 @@ msgstr ""
 #
 msgid "No backup needed"
 msgstr "Não necessita de Backup"
+
+#
+#, fuzzy
+msgid "No config items available"
+msgstr "Nenhuma actualização disponível."
 
 #
 msgid ""
@@ -9680,6 +9729,9 @@ msgstr ""
 msgid "Please connect your %s %s to the internet"
 msgstr "Por favor ligue o seu receptor à Internet"
 
+msgid "Please contact the manufacturer for clarification."
+msgstr ""
+
 #
 msgid "Please do not change any values unless you know what you are doing!"
 msgstr "Por favor não altere qualquer valor, a não ser que tenha a certeza das alterações!"
@@ -10264,10 +10316,6 @@ msgid "Press OK to activate the selected %s skin."
 msgstr "Prima OK para activar o tema seleccionado."
 
 #
-msgid "Press OK to activate the settings."
-msgstr "Prima OK para activar as definições."
-
-#
 msgid "Press OK to edit the settings."
 msgstr "Prima OK para editar as definições."
 
@@ -10325,6 +10373,11 @@ msgstr "Prima OK para alterar a selecção."
 
 msgid "Press OK, save and exit..."
 msgstr ""
+
+#
+#, fuzzy
+msgid "Press green button to activate the settings."
+msgstr "Prima OK para activar as definições."
 
 msgid "Press or select button and then press 'OK' for attach function."
 msgstr ""
@@ -11125,6 +11178,10 @@ msgstr "Reiniciar interface gráfica agora?"
 #, fuzzy
 msgid "Restart Network Adapter"
 msgstr "Reiniciar a rede"
+
+#, fuzzy
+msgid "Restart Sleeptimer"
+msgstr "Temporizador"
 
 #
 #, fuzzy
@@ -13720,6 +13777,20 @@ msgid "Start"
 msgstr "Iniciar teste"
 
 #, fuzzy
+msgid "Start CableScan"
+msgstr "Pesquisa cabo"
+
+#
+#, fuzzy
+msgid "Start Cablescan"
+msgstr "Iniciar teste"
+
+#
+#, fuzzy
+msgid "Start Fastscan"
+msgstr "Iniciar teste"
+
+#, fuzzy
 msgid "Start Sleeptimer"
 msgstr "Temporizador"
 
@@ -13727,11 +13798,6 @@ msgstr "Temporizador"
 #, fuzzy
 msgid "Start directory"
 msgstr "directório inicial"
-
-#
-#, fuzzy
-msgid "Start fastscan"
-msgstr "Iniciar teste"
 
 #
 msgid "Start from the beginning"
@@ -13781,11 +13847,12 @@ msgstr "Iniciar Timeshift"
 msgid "Start with list screen"
 msgstr "Iniciar com a lista no ecrã"
 
-#, fuzzy
-msgid "Start/Stop Sleeptimer"
-msgstr "Inactividade do temporizador"
-
 msgid "Start/stop slide show"
+msgstr ""
+
+msgid ""
+"Starting download of image file?\n"
+"Press OK to start or Exit to abort."
 msgstr ""
 
 #
@@ -14293,6 +14360,7 @@ msgstr ""
 
 #
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
+#. Don't translate TRANSLATOR_INFO to show '(N/A)'
 msgid "TRANSLATOR_INFO"
 msgstr "Jotta"
 
@@ -15098,6 +15166,11 @@ msgstr "Visão geral do agendamento"
 
 #
 #, fuzzy
+msgid "Timer recording failed. No space left on device!\n"
+msgstr "Localização das gravações"
+
+#
+#, fuzzy
 msgid "Timer recording location"
 msgstr "Localização das gravações"
 
@@ -15293,6 +15366,11 @@ msgstr "Traduções"
 #, fuzzy
 msgid "Translations Info"
 msgstr "Traduções"
+
+#
+#, fuzzy
+msgid "Translator comment"
+msgstr "Tradução"
 
 #
 msgid "Transmission mode"
@@ -15792,6 +15870,11 @@ msgstr ""
 #, fuzzy
 msgid "Use circular LNB"
 msgstr "circular esquerda"
+
+#
+#, fuzzy
+msgid "Use default spinner"
+msgstr "Definido pelo utilizador"
 
 msgid "Use fastscan channel names"
 msgstr "Usar o nome dos canais da pesquisa rápida"
@@ -16608,6 +16691,10 @@ msgstr "Quando activado, os canais podem ser agrupados em vários Bouquets."
 #, fuzzy
 msgid "When enabled, show channel numbers in the channel selection screen."
 msgstr "Quando activado, mostrar a numeração dos canais na Lista de Canais."
+
+#, fuzzy
+msgid "When enabled, spinners that come with the activated skin are ignored."
+msgstr "Quando activado, as legendas para os deficientes auditivos podem ser usadas."
 
 msgid "When enabled, subtitles for the hearing impaired can be used."
 msgstr "Quando activado, as legendas para os deficientes auditivos podem ser usadas."
