--- a/po/sr.po
+++ b/po/sr.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-04 18:59+0200\n"
+"POT-Creation-Date: 2024-06-20 07:37+0200\n"
 "PO-Revision-Date: 2011-04-14 00:02+0200\n"
 "Last-Translator: majevica <jovanovic@gmx.ch>\n"
 "Language-Team: veselin & majevica CRNABERZA <jovanovic@gmx.ch>\n"
@@ -1488,6 +1488,15 @@ msgstr "Da li ste sigurni da želite izaći iz ovog čarobnjaka?"
 #, fuzzy
 msgid "Are you sure you want to reload the EPG data from:\n"
 msgstr "Da li ste sigurni da želite izaći iz ovog čarobnjaka?"
+
+#
+#, fuzzy
+msgid ""
+"Are you sure you want to remove your wifi configuration?\n"
+"\n"
+msgstr ""
+"Da li ste sigurni da želite aktivirati ovu mrežnu konfiguraciju?\n"
+"\n"
 
 #
 msgid ""
@@ -3006,7 +3015,7 @@ msgstr ""
 msgid "Configure the duration in minutes for the screensaver."
 msgstr ""
 
-msgid "Configure the duration in minutes for the sleeptimer. Select this entry and click OK or green to start/stop the sleeptimer"
+msgid "Configure the duration in minutes for the sleeptimer. Select this entry and press blue to start/restart the sleeptimer or use yellow for stop active sleeptimer."
 msgstr ""
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
@@ -3230,11 +3239,6 @@ msgstr "Konfiguriši svoj interni LAN"
 #
 msgid "Configure your network again"
 msgstr "Konfigurišite vašu mrežu ponovo"
-
-#
-#, fuzzy
-msgid "Configure your network settings and press OK to scan"
-msgstr "Pritisnite OK za aktiviranje izabrane maske."
 
 #
 msgid "Configure your wireless LAN again"
@@ -3930,6 +3934,11 @@ msgstr "Obriši datoteku"
 
 #
 #, fuzzy
+msgid "Delete Wifi configuration"
+msgstr "Konfiguracija tjunera"
+
+#
+#, fuzzy
 msgid "Delete all the text"
 msgstr "obriši unos plejliste"
 
@@ -3985,6 +3994,11 @@ msgstr ""
 
 msgid "Delete the character under the text cursor"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Delete the current Wifi configuration.\n"
+msgstr "Aktivirajte aktuelnu konfiguraciju"
 
 msgid "Delete the selected files or directories"
 msgstr ""
@@ -5200,6 +5214,11 @@ msgstr ""
 msgid "Error reading bouquets.tv"
 msgstr "završi uređivanje buketa"
 
+#
+#, fuzzy
+msgid "Error removing your wifi configuration"
+msgstr "Konfiguracija tjunera"
+
 #, python-format
 msgid ""
 "Error renaming %s to %s:\n"
@@ -5790,6 +5809,11 @@ msgstr "Izaberi datoteke/fascikle za bekap"
 msgid "Filesystem check"
 msgstr "Provera sistema datoteka"
 
+#
+#, fuzzy, python-format
+msgid "Filesystem: %s\n"
+msgstr "Provera sistema datoteka"
+
 msgid "Filter extension for 'My extension' setting of 'Filter extension'. Use the extension name without a '.'."
 msgstr ""
 
@@ -5827,6 +5851,11 @@ msgstr "Završeno"
 #
 msgid "Finished configuring your network"
 msgstr "Završena konfiguracija vaše mreže"
+
+#
+#, fuzzy
+msgid "Finished removing your wifi configuration"
+msgstr "Završeno je restartovanje vaše mreže"
 
 #
 msgid "Finished restarting your network"
@@ -5971,6 +6000,11 @@ msgstr "Veličina frejma u punom izgledu"
 #, fuzzy
 msgid "France"
 msgstr "Odustani"
+
+#
+#, fuzzy, python-format
+msgid "Free: %s/%s\n"
+msgstr "Model:"
 
 #
 msgid "French"
@@ -7179,6 +7213,11 @@ msgstr "Interni fleš"
 msgid "Internal flash"
 msgstr "Interni fleš"
 
+#
+#, fuzzy
+msgid "Internal flash storage:"
+msgstr "Interni fleš"
+
 msgid "Internal hdd only"
 msgstr ""
 
@@ -8202,6 +8241,11 @@ msgstr "Urediti"
 msgid "MountView"
 msgstr ""
 
+#
+#, fuzzy, python-format
+msgid "Mountpoint: %s (%s)\n"
+msgstr "Model:"
+
 msgid "Mountpoints"
 msgstr ""
 
@@ -8746,6 +8790,11 @@ msgstr ""
 #
 msgid "No backup needed"
 msgstr "Sigurnosna kopija nije potrebna"
+
+#
+#, fuzzy
+msgid "No config items available"
+msgstr "ažuriranja dostupna."
 
 #
 msgid ""
@@ -9746,6 +9795,9 @@ msgstr ""
 msgid "Please connect your %s %s to the internet"
 msgstr ""
 
+msgid "Please contact the manufacturer for clarification."
+msgstr ""
+
 #
 msgid "Please do not change any values unless you know what you are doing!"
 msgstr "Molim ne menjate vrednosti ukoliko ne znate šta radite!"
@@ -10321,10 +10373,6 @@ msgid "Press OK to activate the selected %s skin."
 msgstr "Pritisnite OK za aktiviranje izabrane maske."
 
 #
-msgid "Press OK to activate the settings."
-msgstr "Pritisnite OK za aktiviranje postavki."
-
-#
 msgid "Press OK to edit the settings."
 msgstr "Pritisnite OK da uredite postavke."
 
@@ -10381,6 +10429,11 @@ msgstr "Pritisnite OK da prebacite izbor."
 
 msgid "Press OK, save and exit..."
 msgstr ""
+
+#
+#, fuzzy
+msgid "Press green button to activate the settings."
+msgstr "Pritisnite OK za aktiviranje postavki."
 
 msgid "Press or select button and then press 'OK' for attach function."
 msgstr ""
@@ -11178,6 +11231,11 @@ msgstr "Restart GUI sada?"
 #, fuzzy
 msgid "Restart Network Adapter"
 msgstr "Restartujte mrežu"
+
+#
+#, fuzzy
+msgid "Restart Sleeptimer"
+msgstr "Početno vreme "
 
 #
 #, fuzzy
@@ -13808,6 +13866,21 @@ msgstr "Počnite test"
 
 #
 #, fuzzy
+msgid "Start CableScan"
+msgstr "Počnite test"
+
+#
+#, fuzzy
+msgid "Start Cablescan"
+msgstr "Počnite test"
+
+#
+#, fuzzy
+msgid "Start Fastscan"
+msgstr "Počnite test"
+
+#
+#, fuzzy
 msgid "Start Sleeptimer"
 msgstr "Početno vreme "
 
@@ -13815,11 +13888,6 @@ msgstr "Početno vreme "
 #, fuzzy
 msgid "Start directory"
 msgstr "Početni direktorijum"
-
-#
-#, fuzzy
-msgid "Start fastscan"
-msgstr "Počnite test"
 
 #
 msgid "Start from the beginning"
@@ -13870,12 +13938,12 @@ msgstr "pokreni vrem.pomak"
 msgid "Start with list screen"
 msgstr ""
 
-#
-#, fuzzy
-msgid "Start/Stop Sleeptimer"
-msgstr "Početno vreme "
-
 msgid "Start/stop slide show"
+msgstr ""
+
+msgid ""
+"Starting download of image file?\n"
+"Press OK to start or Exit to abort."
 msgstr ""
 
 #
@@ -14400,8 +14468,9 @@ msgstr ""
 
 #
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
+#. Don't translate TRANSLATOR_INFO to show '(N/A)'
 msgid "TRANSLATOR_INFO"
-msgstr "PREVODILAC_INFO"
+msgstr "TRANSLATOR_INFO"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -15203,6 +15272,11 @@ msgstr "Unos Tajmera"
 
 #
 #, fuzzy
+msgid "Timer recording failed. No space left on device!\n"
+msgstr "Lokacija snimanja po tajmeru"
+
+#
+#, fuzzy
 msgid "Timer recording location"
 msgstr "Lokacija snimanja po tajmeru"
 
@@ -15398,6 +15472,11 @@ msgstr ""
 #
 #, fuzzy
 msgid "Translations Info"
+msgstr "Prevod"
+
+#
+#, fuzzy
+msgid "Translator comment"
 msgstr "Prevod"
 
 #
@@ -15892,6 +15971,11 @@ msgstr ""
 #, fuzzy
 msgid "Use circular LNB"
 msgstr "leva cirkularna"
+
+#
+#, fuzzy
+msgid "Use default spinner"
+msgstr "Definisano od korisnika"
 
 msgid "Use fastscan channel names"
 msgstr ""
@@ -16678,6 +16762,9 @@ msgid "When enabled, services may be grouped in multiple bouquets."
 msgstr ""
 
 msgid "When enabled, show channel numbers in the channel selection screen."
+msgstr ""
+
+msgid "When enabled, spinners that come with the activated skin are ignored."
 msgstr ""
 
 msgid "When enabled, subtitles for the hearing impaired can be used."
