--- a/po/sv.po
+++ b/po/sv.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 teamBlue\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-06-04 18:59+0200\n"
+"POT-Creation-Date: 2024-06-20 07:37+0200\n"
 "PO-Revision-Date: 2017-03-05 13:24+0100\n"
 "Last-Translator: Magnus Nilsson <mag_nilsson@hotmail.com>\n"
 "Language-Team: \n"
@@ -1433,6 +1433,15 @@ msgstr "Är du säker på att du vill avsluta den här guiden?"
 #, fuzzy
 msgid "Are you sure you want to reload the EPG data from:\n"
 msgstr "Är du säker på att du vill avsluta den här guiden?"
+
+#
+#, fuzzy
+msgid ""
+"Are you sure you want to remove your wifi configuration?\n"
+"\n"
+msgstr ""
+"Är du säker på att du vill aktivera den här nätverkskonfigurationen?\n"
+"\n"
 
 #
 msgid ""
@@ -2931,7 +2940,7 @@ msgstr ""
 msgid "Configure the duration in minutes for the screensaver."
 msgstr "Konfigurera varaktighet i minuter för skärmsläckaren."
 
-msgid "Configure the duration in minutes for the sleeptimer. Select this entry and click OK or green to start/stop the sleeptimer"
+msgid "Configure the duration in minutes for the sleeptimer. Select this entry and press blue to start/restart the sleeptimer or use yellow for stop active sleeptimer."
 msgstr ""
 
 msgid "Configure the duration when the receiver should go to shut down in case the receiver is in standby mode."
@@ -3149,10 +3158,6 @@ msgstr "Konfigurera ditt interna LAN"
 #
 msgid "Configure your network again"
 msgstr "Konfigurera ditt nätverk igen"
-
-#, fuzzy
-msgid "Configure your network settings and press OK to scan"
-msgstr "Konfigurera dina nätverksinställningar, och tryck OK för att starta skanningen"
 
 #
 msgid "Configure your wireless LAN again"
@@ -3832,6 +3837,11 @@ msgstr "Ta bort fil"
 
 #
 #, fuzzy
+msgid "Delete Wifi configuration"
+msgstr "Tunerkonfiguration"
+
+#
+#, fuzzy
 msgid "Delete all the text"
 msgstr "Ta bort post i spellista"
 
@@ -3884,6 +3894,11 @@ msgstr ""
 
 msgid "Delete the character under the text cursor"
 msgstr ""
+
+#
+#, fuzzy
+msgid "Delete the current Wifi configuration.\n"
+msgstr "Aktivera nuvarande konfiguration"
 
 msgid "Delete the selected files or directories"
 msgstr ""
@@ -5082,6 +5097,10 @@ msgstr ""
 msgid "Error reading bouquets.tv"
 msgstr "avsluta favoritlists editor"
 
+#, fuzzy
+msgid "Error removing your wifi configuration"
+msgstr "Konfiguration av filmlista"
+
 #, python-format
 msgid ""
 "Error renaming %s to %s:\n"
@@ -5654,6 +5673,11 @@ msgstr "Ange filer/bibliotek att ta backup på"
 msgid "Filesystem check"
 msgstr "Filsystemskontroll"
 
+#
+#, fuzzy, python-format
+msgid "Filesystem: %s\n"
+msgstr "Filsystemskontroll"
+
 msgid "Filter extension for 'My extension' setting of 'Filter extension'. Use the extension name without a '.'."
 msgstr ""
 
@@ -5690,6 +5714,11 @@ msgstr "Klart"
 #
 msgid "Finished configuring your network"
 msgstr "Klar med konfigureringen av ditt nätverk"
+
+#
+#, fuzzy
+msgid "Finished removing your wifi configuration"
+msgstr "Klar med omstarten av ditt nätverk"
 
 #
 msgid "Finished restarting your network"
@@ -5833,6 +5862,11 @@ msgstr "Ramstorlek i fullskärm"
 #, fuzzy
 msgid "France"
 msgstr "romantik"
+
+#
+#, fuzzy, python-format
+msgid "Free: %s/%s\n"
+msgstr "Modell: "
 
 #
 msgid "French"
@@ -7002,6 +7036,11 @@ msgstr "Intern Flash"
 msgid "Internal flash"
 msgstr "Intern Flash"
 
+#
+#, fuzzy
+msgid "Internal flash storage:"
+msgstr "Intern Flash"
+
 msgid "Internal hdd only"
 msgstr "Intern HDD bara"
 
@@ -7989,6 +8028,10 @@ msgstr "Montera"
 msgid "MountView"
 msgstr "Montera"
 
+#, fuzzy, python-format
+msgid "Mountpoint: %s (%s)\n"
+msgstr "Montera"
+
 #, fuzzy
 msgid "Mountpoints"
 msgstr "Montera"
@@ -8515,6 +8558,10 @@ msgstr ""
 #
 msgid "No backup needed"
 msgstr "Ingen backup behövs"
+
+#, fuzzy
+msgid "No config items available"
+msgstr "Inga uppdateringar tillgängliga."
 
 #
 msgid ""
@@ -9493,6 +9540,9 @@ msgstr ""
 msgid "Please connect your %s %s to the internet"
 msgstr "Vänligen anslut din mottagare till Internet"
 
+msgid "Please contact the manufacturer for clarification."
+msgstr ""
+
 #
 msgid "Please do not change any values unless you know what you are doing!"
 msgstr "Vänligen ändra inte om du inte vet vad du gör!"
@@ -10061,10 +10111,6 @@ msgid "Press OK to activate the selected %s skin."
 msgstr "Tryck OK för aktivera valt utseende."
 
 #
-msgid "Press OK to activate the settings."
-msgstr "Tryck OK för aktivera inställningarna."
-
-#
 msgid "Press OK to edit the settings."
 msgstr "Tryck OK för att ändra inställningar."
 
@@ -10120,6 +10166,11 @@ msgstr "Tryck OK för att växla val."
 
 msgid "Press OK, save and exit..."
 msgstr ""
+
+#
+#, fuzzy
+msgid "Press green button to activate the settings."
+msgstr "Tryck OK för aktivera inställningarna."
 
 msgid "Press or select button and then press 'OK' for attach function."
 msgstr ""
@@ -10905,6 +10956,10 @@ msgstr "Omstart av GUI nu?"
 #, fuzzy
 msgid "Restart Network Adapter"
 msgstr "Omstart nätverk"
+
+#, fuzzy
+msgid "Restart Sleeptimer"
+msgstr "Insomningstimer"
 
 #
 #, fuzzy
@@ -13449,6 +13504,20 @@ msgid "Start"
 msgstr "Starta test"
 
 #, fuzzy
+msgid "Start CableScan"
+msgstr "Kabelskanning"
+
+#
+#, fuzzy
+msgid "Start Cablescan"
+msgstr "Starta test"
+
+#
+#, fuzzy
+msgid "Start Fastscan"
+msgstr "Starta test"
+
+#, fuzzy
 msgid "Start Sleeptimer"
 msgstr "Insomningstimer"
 
@@ -13456,11 +13525,6 @@ msgstr "Insomningstimer"
 #, fuzzy
 msgid "Start directory"
 msgstr "startbibliotek"
-
-#
-#, fuzzy
-msgid "Start fastscan"
-msgstr "Starta test"
 
 #
 msgid "Start from the beginning"
@@ -13508,11 +13572,12 @@ msgstr "Starta timeshift"
 msgid "Start with list screen"
 msgstr "Börja med listskärmen"
 
-#, fuzzy
-msgid "Start/Stop Sleeptimer"
-msgstr "Inaktiv Insomningstimer"
-
 msgid "Start/stop slide show"
+msgstr ""
+
+msgid ""
+"Starting download of image file?\n"
+"Press OK to start or Exit to abort."
 msgstr ""
 
 #
@@ -14008,8 +14073,9 @@ msgid "TEXT"
 msgstr ""
 
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
+#. Don't translate TRANSLATOR_INFO to show '(N/A)'
 msgid "TRANSLATOR_INFO"
-msgstr "ÖVERSÄTTNINGS_INFO"
+msgstr "TRANSLATOR_INFO"
 
 #
 msgid "TS file is too large for ISO9660 level 1!"
@@ -14796,6 +14862,11 @@ msgid "Timer overview"
 msgstr "Översikt av timer(s)"
 
 #
+#, fuzzy
+msgid "Timer recording failed. No space left on device!\n"
+msgstr "Timerinspelningens plats"
+
+#
 msgid "Timer recording location"
 msgstr "Timerinspelningens plats"
 
@@ -14987,6 +15058,11 @@ msgstr "Översättningar"
 #, fuzzy
 msgid "Translations Info"
 msgstr "Översättningar"
+
+#
+#, fuzzy
+msgid "Translator comment"
+msgstr "Översättning"
 
 #
 msgid "Transmission mode"
@@ -15478,6 +15554,11 @@ msgstr ""
 #, fuzzy
 msgid "Use circular LNB"
 msgstr "cirkulär vänster"
+
+#
+#, fuzzy
+msgid "Use default spinner"
+msgstr "Användardefinierat"
 
 msgid "Use fastscan channel names"
 msgstr "Använd snabbskanningens kanalnamn"
@@ -16269,6 +16350,10 @@ msgstr "Vid aktiverad, kommer kanaler grupperas i flera favoritlistor."
 
 msgid "When enabled, show channel numbers in the channel selection screen."
 msgstr "Vid aktiverad, kommer kanalnummer visas i kanallistan."
+
+#, fuzzy
+msgid "When enabled, spinners that come with the activated skin are ignored."
+msgstr "Vid aktiverad, kommer undertexter för hörselskadade användas."
 
 msgid "When enabled, subtitles for the hearing impaired can be used."
 msgstr "Vid aktiverad, kommer undertexter för hörselskadade användas."
